@@ -1,11 +1,13 @@
-// AbstractTurnout.java
 package jmri.implementation;
 
+import java.util.Arrays;
+import javax.annotation.CheckReturnValue;
 import jmri.InstanceManager;
 import jmri.JmriException;
 import jmri.NamedBeanHandle;
 import jmri.PushbuttonPacket;
 import jmri.Sensor;
+import jmri.SensorManager;
 import jmri.Turnout;
 import jmri.TurnoutOperation;
 import jmri.TurnoutOperationManager;
@@ -32,18 +34,11 @@ import org.slf4j.LoggerFactory;
  * corresponds to a particular physical turnout on the layout.
  * <p>
  * Turnout system names are always upper case.
- * <P>
  *
  * @author Bob Jacobsen Copyright (C) 2001, 2009
- * @version $Revision$
  */
 public abstract class AbstractTurnout extends AbstractNamedBean implements
-        Turnout, java.io.Serializable, java.beans.PropertyChangeListener {
-
-    /**
-     *
-     */
-    private static final long serialVersionUID = -1138214787466499528L;
+        Turnout, java.beans.PropertyChangeListener {
 
     protected AbstractTurnout(String systemName) {
         super(systemName.toUpperCase());
@@ -53,9 +48,13 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
         super(systemName.toUpperCase(), userName);
     }
 
+    @Override
     public String getBeanType() {
         return Bundle.getMessage("BeanNameTurnout");
     }
+
+    private String closedText = InstanceManager.turnoutManagerInstance().getClosedText();
+    private String thrownText = InstanceManager.turnoutManagerInstance().getThrownText();
 
     /**
      * Handle a request to change state, typically by sending a message to the
@@ -72,14 +71,17 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
 
     // implementing classes will typically have a function/listener to get
     // updates from the layout, which will then call
-    //		public void firePropertyChange(String propertyName,
-    //					       	Object oldValue,
-    //						Object newValue)
+    //        public void firePropertyChange(String propertyName,
+    //                               Object oldValue,
+    //                        Object newValue)
     // _once_ if anything has changed state
     /**
-     * Sets a new Commanded state, if need be notifying the listeners, but does
-     * NOT send the command downstream. This is used when a new commanded state
+     * Set a new Commanded state, if need be notifying the listeners, but do
+     * NOT send the command downstream.
+     * <p>
+     * This is used when a new commanded state
      * is noticed from another command.
+     * @param s new state
      */
     protected void newCommandedState(int s) {
         if (_commandedState != s) {
@@ -90,6 +92,7 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
         }
     }
 
+    @Override
     public int getKnownState() {
         return _knownState;
     }
@@ -99,10 +102,12 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
      * appropriate starts a TurnoutOperator to do its thing. If there is no
      * TurnoutOperator (not required or nothing suitable) then just tell the
      * layout and hope for the best.
+     * @param s commanded state to set
      */
+    @Override
     public void setCommandedState(int s) {
-        log.debug("set commanded state for turnout " + getSystemName() + " to "
-                + s);
+        log.debug("set commanded state for turnout {} to {}", getFullyFormattedDisplayName(),
+                (s==Turnout.CLOSED ? closedText : thrownText));
         newCommandedState(s);
         myOperator = getTurnoutOperator(); // MUST set myOperator before starting the thread
         if (myOperator == null) {
@@ -110,18 +115,31 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
             // optionally handle feedback
             if (_activeFeedbackType == DIRECT) {
                 newKnownState(s);
+            } else if (_activeFeedbackType == DELAYED) {
+                newKnownState(INCONSISTENT);
+                jmri.util.ThreadingUtil.runOnLayoutDelayed( () -> { newKnownState(s); },
+                         DELAYED_FEEDBACK_INTERVAL );
             }
         } else {
             myOperator.start();
         }
     }
 
+    /**
+     * Define duration of delay for DELAYED feedback mode.
+     * <p>
+     * Defined as "public non-final"
+     * so it can be changed in e.g. the jython/SetDefaultDelayedTurnoutDelay script
+     */
+    public static int DELAYED_FEEDBACK_INTERVAL = 4000;
+
+    @Override
     public int getCommandedState() {
         return _commandedState;
     }
 
     /**
-     * Add a protected newKnownState() for use by implementations.
+     * Add a newKnownState() for use by implementations.
      * <P>
      * Use this to update internal information when a state change is detected
      * <em>outside</em> the Turnout object, e.g. via feedback from sensors on
@@ -137,11 +155,12 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
      * going to THROWN or CLOSED, because there may be others listening to
      * network state.
      * <P>
-     * Not intended for general use, e.g. for users to set the KnownState.
+     * This method is intended for general use, e.g. for users to set the KnownState,
+     * so it doesn't appear in the Turnout interface.
      *
      * @param s New state value
      */
-    protected void newKnownState(int s) {
+    public void newKnownState(int s) {
         if (_knownState != s) {
             int oldState = _knownState;
             _knownState = s;
@@ -157,11 +176,12 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
     }
 
     /**
-     * Show whether state is one you can safely run trains over
+     * Show whether state is one you can safely run trains over.
      *
-     * @return	true iff state is a valid one and the known state is the same as
+     * @return true iff state is a valid one and the known state is the same as
      *         commanded
      */
+    @Override
     public boolean isConsistentState() {
         return _commandedState == _knownState
                 && (_commandedState == CLOSED || _commandedState == THROWN);
@@ -184,7 +204,9 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
      * <P>
      * Note that getState() and setState(int) are not symmetric: getState is the
      * known state, and set state modifies the commanded state.
+     * @param s new state
      */
+    @Override
     public void setState(int s) {
         setCommandedState(s);
     }
@@ -197,17 +219,29 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
      * <P>
      * Note that getState() and setState(int) are not symmetric: getState is the
      * known state, and set state modifies the commanded state.
+     * @return current state
      */
+    @Override
     public int getState() {
         return getKnownState();
     }
 
+    @Override
+    @CheckReturnValue
+    public String describeState(int state) {
+        switch (state) {
+            case THROWN: return Bundle.getMessage("TurnoutStateThrown");
+            case CLOSED: return Bundle.getMessage("TurnoutStateClosed");
+            default: return super.describeState(state);
+        }
+    }
+
     protected String[] _validFeedbackNames = {"DIRECT", "ONESENSOR",
-        "TWOSENSOR"};
+        "TWOSENSOR", "DELAYED"};
 
-    protected int[] _validFeedbackModes = {DIRECT, ONESENSOR, TWOSENSOR};
+    protected int[] _validFeedbackModes = {DIRECT, ONESENSOR, TWOSENSOR, DELAYED};
 
-    protected int _validFeedbackTypes = DIRECT | ONESENSOR | TWOSENSOR;
+    protected int _validFeedbackTypes = DIRECT | ONESENSOR | TWOSENSOR | DELAYED;
 
     protected int _activeFeedbackType = DIRECT;
 
@@ -217,35 +251,41 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
 
     private int _numberOutputBits = 1;
 
-    /* Number of bits to control a turnout - defaults to one */
+    /** Number of bits to control a turnout - defaults to one */
     private int _controlType = 0;
 
-    /* Type of turnout control - defaults to 0 for 'steady state' */
+    /** Type of turnout control - defaults to 0 for 'steady state' */
+    @Override
     public int getNumberOutputBits() {
         return _numberOutputBits;
     }
 
+    @Override
     public void setNumberOutputBits(int num) {
         _numberOutputBits = num;
     }
 
+    @Override
     public int getControlType() {
         return _controlType;
     }
 
+    @Override
     public void setControlType(int num) {
         _controlType = num;
     }
 
+    @Override
     public int getValidFeedbackTypes() {
         return _validFeedbackTypes;
     }
 
-    @edu.umd.cs.findbugs.annotations.SuppressWarnings(value = "EI_EXPOSE_REP") // OK until Java 1.6 allows return of cheap array copy
+    @Override
     public String[] getValidFeedbackNames() {
-        return _validFeedbackNames;
+        return Arrays.copyOf(_validFeedbackNames, _validFeedbackNames.length);
     }
 
+    @Override
     public void setFeedbackMode(String mode) throws IllegalArgumentException {
         for (int i = 0; i < _validFeedbackNames.length; i++) {
             if (mode.equals(_validFeedbackNames[i])) {
@@ -256,6 +296,7 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
         throw new IllegalArgumentException("Unexpected mode: " + mode);
     }
 
+    @Override
     public void setFeedbackMode(int mode) throws IllegalArgumentException {
         // check for error - following removed the low bit from mode
         int test = mode & (mode - 1);
@@ -269,14 +310,16 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
             firePropertyChange("feedbackchange", Integer.valueOf(oldMode),
                     Integer.valueOf(_activeFeedbackType));
         }
-        // unlock turnout if feedback is changed 
+        // unlock turnout if feedback is changed
         setLocked(CABLOCKOUT, false);
     }
 
+    @Override
     public int getFeedbackMode() {
         return _activeFeedbackType;
     }
 
+    @Override
     public String getFeedbackModeName() {
         for (int i = 0; i < _validFeedbackNames.length; i++) {
             if (_activeFeedbackType == _validFeedbackModes[i]) {
@@ -287,6 +330,19 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
                 + _activeFeedbackType);
     }
 
+    @Override
+    public void requestUpdateFromLayout() {
+        if (_activeFeedbackType == ONESENSOR || _activeFeedbackType == TWOSENSOR) {
+            Sensor s1 = getFirstSensor();
+            if (s1 != null) s1.requestUpdateFromLayout();
+        }
+        if (_activeFeedbackType == TWOSENSOR) {
+            Sensor s2 = getSecondSensor();
+            if (s2 != null) s2.requestUpdateFromLayout();
+        }
+    }
+
+    @Override
     public void setInverted(boolean inverted) {
         boolean oldInverted = _inverted;
         _inverted = inverted;
@@ -309,7 +365,9 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
      * <P>
      * Used in polling loops in system-specific code, so made final to allow
      * optimization.
+     * @return inverted status
      */
+    @Override
     final public boolean getInverted() {
         return _inverted;
     }
@@ -317,9 +375,11 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
     protected boolean _inverted = false;
 
     /**
-     * Determine if the turnouts can be inverted. If true inverted turnouts
-     * supported.
+     * Determine if the turnouts can be inverted. If true, inverted turnouts
+     * are supported.
+     * @return invert supported
      */
+    @Override
     public boolean canInvert() {
         return false;
     }
@@ -332,11 +392,15 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
      * state. Turnout that have local buttons can also be locked if their
      * decoder supports it.
      *
-     * @param locked
+     * @param turnoutLockout lockout state to monitor. Possible values
+     *                       {@link #CABLOCKOUT}, {@link #PUSHBUTTONLOCKOUT}.
+     *                       Can be combined to monitor both states.
+     * @param locked         true if turnout to be locked
      */
+    @Override
     public void setLocked(int turnoutLockout, boolean locked) {
         boolean firechange = false;
-        if ((turnoutLockout & CABLOCKOUT) > 0 && _cabLockout != locked) {
+        if ((turnoutLockout & CABLOCKOUT) != 0 && _cabLockout != locked) {
             firechange = true;
             if (canLock(CABLOCKOUT)) {
                 _cabLockout = locked;
@@ -344,7 +408,7 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
                 _cabLockout = false;
             }
         }
-        if ((turnoutLockout & PUSHBUTTONLOCKOUT) > 0
+        if ((turnoutLockout & PUSHBUTTONLOCKOUT) != 0
                 && _pushButtonLockout != locked) {
             firechange = true;
             if (canLock(PUSHBUTTONLOCKOUT)) {
@@ -364,7 +428,11 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
     /**
      * Determine if turnout is locked. Returns true if turnout is locked. There
      * are two types of locks, cab lockout, and pushbutton lockout.
+     *
+     * @param turnoutLockout turnout to check
+     * @return locked state
      */
+    @Override
     public boolean getLocked(int turnoutLockout) {
         if (turnoutLockout == CABLOCKOUT) {
             return _cabLockout;
@@ -375,7 +443,6 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
         } else {
             return false;
         }
-
     }
 
     protected boolean _cabLockout = false;
@@ -386,10 +453,26 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
 
     protected boolean _enablePushButtonLockout = false;
 
+    /**
+     * This implementation by itself doesn't provide locking support.
+     * Override this in subclasses that do.
+     *
+     * @return One of 0 for none
+     */
+    public int getPossibleLockModes() { return 0; }
+
+    /**
+     * This implementation by itself doesn't provide locking support.
+     * Override this in subclasses that do.
+     *
+     * @return false for not supported
+     */
+    @Override
     public boolean canLock(int turnoutLockout) {
         return false;
     }
 
+    @Override
     public void enableLockOperation(int turnoutLockout, boolean enabled) {
     }
 
@@ -397,7 +480,10 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
      * When true, report to console anytime a cab attempts to change the state
      * of a turnout on the layout. When a turnout is cab locked, only JMRI is
      * allowed to change the state of a turnout.
+     *
+     * @param reportLocked report locked state
      */
+    @Override
     public void setReportLocked(boolean reportLocked) {
         boolean oldReportLocked = _reportLocked;
         _reportLocked = reportLocked;
@@ -411,7 +497,10 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
      * When true, report to console anytime a cab attempts to change the state
      * of a turnout on the layout. When a turnout is cab locked, only JMRI is
      * allowed to change the state of a turnout.
+     *
+     * @return report locked state
      */
+    @Override
     public boolean getReportLocked() {
         return _reportLocked;
     }
@@ -424,18 +513,20 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
     protected String[] _validDecoderNames = PushbuttonPacket
             .getValidDecoderNames();
 
-    @edu.umd.cs.findbugs.annotations.SuppressWarnings(value = "EI_EXPOSE_REP") // OK until Java 1.6 allows return of cheap array copy
+    @Override
     public String[] getValidDecoderNames() {
-        return _validDecoderNames;
+        return Arrays.copyOf(_validDecoderNames, _validDecoderNames.length);
     }
 
     // set the turnout decoder default to unknown
     protected String _decoderName = PushbuttonPacket.unknown;
 
+    @Override
     public String getDecoderName() {
         return _decoderName;
     }
 
+    @Override
     public void setDecoderName(String decoderName) {
         _decoderName = decoderName;
     }
@@ -459,10 +550,12 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
         return myOperator;
     }
 
+    @Override
     public TurnoutOperation getTurnoutOperation() {
         return myTurnoutOperation;
     }
 
+    @Override
     public void setTurnoutOperation(TurnoutOperation toper) {
         if (log.isDebugEnabled()) {
             log.debug("setTurnoutOperation Called for turnout {}.  Operation type {}", this.getSystemName(), toper);
@@ -486,20 +579,22 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
         }
     }
 
+    @Override
     public boolean getInhibitOperation() {
         return inhibitOperation;
     }
 
+    @Override
     public void setInhibitOperation(boolean io) {
         inhibitOperation = io;
     }
 
     /**
-     * find the TurnoutOperation class for this turnout, and get an instance of
-     * the corresponding operator Override this function if you want another way
-     * to choose the operation
+     * Find the TurnoutOperation class for this turnout, and get an instance of
+     * the corresponding operator. Override this function if you want another way
+     * to choose the operation.
      *
-     * @return	newly-instantiated TurnoutOPerator, or null if nothing suitable
+     * @return newly-instantiated TurnoutOPerator, or null if nothing suitable
      */
     protected TurnoutOperator getTurnoutOperator() {
         TurnoutOperator to = null;
@@ -520,16 +615,16 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
 
     /**
      * Allow an actual turnout class to transform private feedback types into
-     * ones that the generic turnout operations know about
+     * ones that the generic turnout operations know about.
      *
-     * @return	apparent feedback mode for operation lookup
+     * @return    apparent feedback mode for operation lookup
      */
     protected int getFeedbackModeForOperation() {
         return getFeedbackMode();
     }
 
-    /*
-     * support for associated sensor or sensors
+    /**
+     * Support for associated sensor or sensors.
      */
     //Sensor getFirstSensor() = null;
     private NamedBeanHandle<Sensor> _firstNamedSensor;
@@ -537,18 +632,14 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
     //Sensor getSecondSensor() = null;
     private NamedBeanHandle<Sensor> _secondNamedSensor;
 
-    public void provideFirstFeedbackSensor(String pName) throws jmri.JmriException {
-        if (InstanceManager.sensorManagerInstance() != null) {
+    @Override
+    public void provideFirstFeedbackSensor(String pName) throws jmri.JmriException, IllegalArgumentException {
+        if (InstanceManager.getNullableDefault(SensorManager.class) != null) {
             if (pName == null || pName.equals("")) {
                 provideFirstFeedbackNamedSensor(null);
             } else {
                 Sensor sensor = InstanceManager.sensorManagerInstance().provideSensor(pName);
-                if (sensor != null) {
-                    provideFirstFeedbackNamedSensor(jmri.InstanceManager.getDefault(jmri.NamedBeanHandleManager.class).getNamedBeanHandle(pName, sensor));
-                } else {
-                    log.error("Sensor '" + pName + "' not available");
-                    throw new jmri.JmriException("Sensor '" + pName + "' not available");
-                }
+                provideFirstFeedbackNamedSensor(jmri.InstanceManager.getDefault(jmri.NamedBeanHandleManager.class).getNamedBeanHandle(pName, sensor));
             }
         } else {
             log.error("No SensorManager for this protocol");
@@ -557,19 +648,23 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
     }
 
     public void provideFirstFeedbackNamedSensor(NamedBeanHandle<Sensor> s) {
-        if (getFirstSensor() != null) {
-            getFirstSensor().removePropertyChangeListener(this);
+        // remove existing if any
+        Sensor temp = getFirstSensor();
+        if (temp != null) {
+            temp.removePropertyChangeListener(this);
         }
 
         _firstNamedSensor = s;
 
         // if need be, set listener
-        if (getFirstSensor() != null) {
-            getFirstSensor().addPropertyChangeListener(this, s.getName(), "Feedback Sensor for " + getDisplayName());
+        temp = getFirstSensor();  // might have changed
+        if (temp != null) {
+            temp.addPropertyChangeListener(this, s.getName(), "Feedback Sensor for " + getDisplayName());
         }
 
     }
 
+    @Override
     public Sensor getFirstSensor() {
         if (_firstNamedSensor == null) {
             return null;
@@ -577,22 +672,19 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
         return _firstNamedSensor.getBean();
     }
 
+    @Override
     public NamedBeanHandle<Sensor> getFirstNamedSensor() {
         return _firstNamedSensor;
     }
 
-    public void provideSecondFeedbackSensor(String pName) throws jmri.JmriException {
-        if (InstanceManager.sensorManagerInstance() != null) {
+    @Override
+    public void provideSecondFeedbackSensor(String pName) throws jmri.JmriException, IllegalArgumentException {
+        if (InstanceManager.getNullableDefault(SensorManager.class) != null) {
             if (pName == null || pName.equals("")) {
                 provideSecondFeedbackNamedSensor(null);
             } else {
                 Sensor sensor = InstanceManager.sensorManagerInstance().provideSensor(pName);
-                if (sensor != null) {
-                    provideSecondFeedbackNamedSensor(jmri.InstanceManager.getDefault(jmri.NamedBeanHandleManager.class).getNamedBeanHandle(pName, sensor));
-                } else {
-                    log.error("Sensor '" + pName + "' not available");
-                    throw new jmri.JmriException("Sensor '" + pName + "' not available");
-                }
+                provideSecondFeedbackNamedSensor(jmri.InstanceManager.getDefault(jmri.NamedBeanHandleManager.class).getNamedBeanHandle(pName, sensor));
             }
         } else {
             log.error("No SensorManager for this protocol");
@@ -601,19 +693,22 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
     }
 
     public void provideSecondFeedbackNamedSensor(NamedBeanHandle<Sensor> s) {
-        // if need be, clean listener
-        if (getSecondSensor() != null) {
-            getSecondSensor().removePropertyChangeListener(this);
+        // remove existing if any
+        Sensor temp = getSecondSensor();
+        if (temp != null) {
+            temp.removePropertyChangeListener(this);
         }
 
         _secondNamedSensor = s;
 
         // if need be, set listener
-        if (getSecondSensor() != null) {
-            getSecondSensor().addPropertyChangeListener(this, s.getName(), "Feedback Sensor for " + getDisplayName());
+        temp = getSecondSensor();  // might have changed
+        if (temp != null) {
+            temp.addPropertyChangeListener(this, s.getName(), "Feedback Sensor for " + getDisplayName());
         }
     }
 
+    @Override
     public Sensor getSecondSensor() {
         if (_secondNamedSensor == null) {
             return null;
@@ -621,13 +716,15 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
         return _secondNamedSensor.getBean();
     }
 
+    @Override
     public NamedBeanHandle<Sensor> getSecondNamedSensor() {
         return _secondNamedSensor;
     }
 
+    @Override
     public void setInitialKnownStateFromFeedback() {
         if (_activeFeedbackType == ONESENSOR) {
-            // ONESENSOR feedback 
+            // ONESENSOR feedback
             if (getFirstSensor() != null) {
                 // set according to state of sensor
                 int sState = getFirstSensor().getKnownState();
@@ -669,8 +766,9 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
 
     /**
      * React to sensor changes by changing the KnownState if using an
-     * appropriate sensor mode
+     * appropriate sensor mode.
      */
+    @Override
     public void propertyChange(java.beans.PropertyChangeEvent evt) {
         if (evt.getSource() == myTurnoutOperation) {
             operationPropertyChange(evt);
@@ -711,15 +809,31 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
             int mode = ((Integer) evt.getNewValue()).intValue();
             Sensor s = (Sensor) evt.getSource();
             if ((mode == Sensor.ACTIVE) && (s == getSecondSensor())) {
-                newKnownState(CLOSED);
+                if(getFirstSensor().getKnownState()==Sensor.INACTIVE) {
+                   newKnownState(CLOSED);
+                } else {
+                   newKnownState(INCONSISTENT);
+                }
+            } else if ((mode == Sensor.INACTIVE) && (s == getSecondSensor())) {
+                if(getFirstSensor().getKnownState()==Sensor.ACTIVE) {
+                   newKnownState(THROWN);
+                } else {
+                   newKnownState(INCONSISTENT);
+                }
             } else if ((mode == Sensor.ACTIVE) && (s == getFirstSensor())) {
-                newKnownState(THROWN);
-            } else if (!(((getFirstSensor().getKnownState() == Sensor.ACTIVE) && (getSecondSensor()
-                    .getKnownState() == Sensor.INACTIVE)) || ((getFirstSensor()
-                    .getKnownState() == Sensor.INACTIVE) && (getSecondSensor()
-                    .getKnownState() == Sensor.ACTIVE)))) // INCONSISTENT if sensor has transitioned to an inconsistent state
-            {
-                newKnownState(INCONSISTENT);
+                if(getSecondSensor().getKnownState()==Sensor.INACTIVE) {
+                   newKnownState(THROWN);
+                } else {
+                   newKnownState(INCONSISTENT);
+                }
+            } else if ((mode == Sensor.INACTIVE) && (s == getFirstSensor())) {
+                if(getSecondSensor().getKnownState()==Sensor.ACTIVE) {
+                   newKnownState(CLOSED);
+                } else {
+                   newKnownState(INCONSISTENT);
+                }
+            } else {
+                   newKnownState(UNKNOWN);
             }
             // end TWOSENSOR block
         } else // don't need to do anything
@@ -728,18 +842,23 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
         }
     }
 
+    @Override
     public void setBinaryOutput(boolean state) {
         binaryOutput = true;
     }
     protected boolean binaryOutput = false;
 
+    @Override
     public void dispose() {
-        if (getFirstSensor() != null) {
-            getFirstSensor().removePropertyChangeListener(this);
+        Sensor temp;
+        temp = getFirstSensor();
+        if (temp != null) {
+            temp.removePropertyChangeListener(this);
         }
         _firstNamedSensor = null;
-        if (getSecondSensor() != null) {
-            getSecondSensor().removePropertyChangeListener(this);
+        temp = getSecondSensor();
+        if (temp != null) {
+            temp.removePropertyChangeListener(this);
         }
         _secondNamedSensor = null;
         super.dispose();
@@ -750,8 +869,9 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
     //boolean useBlockSpeed = true;
 
     //float speedThroughTurnout = 0;
+    @Override
     public float getDivergingLimit() {
-        if ((_divergeSpeed == null) || (_divergeSpeed == "")) {
+        if ((_divergeSpeed == null) || (_divergeSpeed.equals(""))) {
             return -1;
         }
 
@@ -763,28 +883,30 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
             return -1;
         }
         try {
-            return new Float(speed);
+            return Float.valueOf(speed);
             //return Integer.parseInt(_blockSpeed);
         } catch (NumberFormatException nx) {
             //considered normal if the speed is not a number.
         }
         try {
-            return jmri.implementation.SignalSpeedMap.getMap().getSpeed(speed);
+            return jmri.InstanceManager.getDefault(SignalSpeedMap.class).getSpeed(speed);
         } catch (Exception ex) {
             return -1;
         }
     }
 
+    @Override
     public String getDivergingSpeed() {
         if (_divergeSpeed.equals("Global")) {
-            return ("Use Global " + InstanceManager.turnoutManagerInstance().getDefaultThrownSpeed());
+            return (Bundle.getMessage("UseGlobal", "Global") + " " + InstanceManager.turnoutManagerInstance().getDefaultThrownSpeed());
         }
         if (_divergeSpeed.equals("Block")) {
-            return ("Use Block Speed");
+            return (Bundle.getMessage("UseGlobal", "Block Speed"));
         }
         return _divergeSpeed;
     }
 
+    @Override
     public void setDivergingSpeed(String s) throws JmriException {
         if (s == null) {
             throw new JmriException("Value of requested turnout thrown speed can not be null");
@@ -801,7 +923,7 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
                 Float.parseFloat(s);
             } catch (NumberFormatException nx) {
                 try {
-                    jmri.implementation.SignalSpeedMap.getMap().getSpeed(s);
+                    jmri.InstanceManager.getDefault(SignalSpeedMap.class).getSpeed(s);
                 } catch (Exception ex) {
                     throw new JmriException("Value of requested block speed is not valid");
                 }
@@ -812,38 +934,42 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
         firePropertyChange("TurnoutDivergingSpeedChange", oldSpeed, s);
     }
 
+    @Override
     public float getStraightLimit() {
-        if ((_straightSpeed == null) || (_straightSpeed == "")) {
+        if ((_straightSpeed == null) || (_straightSpeed.equals(""))) {
             return -1;
         }
         String speed = _straightSpeed;
         if (_straightSpeed.equals("Global")) {
             speed = InstanceManager.turnoutManagerInstance().getDefaultClosedSpeed();
-        } else if (speed.equals("Block")) {
+        }
+        if (speed.equals("Block")) {
             return -1;
         }
         try {
-            return new Float(speed);
+            return Float.valueOf(speed);
         } catch (NumberFormatException nx) {
             //considered normal if the speed is not a number.
         }
         try {
-            return jmri.implementation.SignalSpeedMap.getMap().getSpeed(speed);
+            return jmri.InstanceManager.getDefault(SignalSpeedMap.class).getSpeed(speed);
         } catch (Exception ex) {
             return -1;
         }
     }
 
+    @Override
     public String getStraightSpeed() {
         if (_straightSpeed.equals("Global")) {
-            return ("Use Global " + InstanceManager.turnoutManagerInstance().getDefaultClosedSpeed());
+            return (Bundle.getMessage("UseGlobal", "Global") + " " + InstanceManager.turnoutManagerInstance().getDefaultClosedSpeed());
         }
         if (_straightSpeed.equals("Block")) {
-            return ("Use Block Speed");
+            return (Bundle.getMessage("UseGlobal", "Block Speed"));
         }
         return _straightSpeed;
     }
 
+    @Override
     public void setStraightSpeed(String s) throws JmriException {
         if (s == null) {
             throw new JmriException("Value of requested turnout straight speed can not be null");
@@ -860,7 +986,7 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
                 Float.parseFloat(s);
             } catch (NumberFormatException nx) {
                 try {
-                    jmri.implementation.SignalSpeedMap.getMap().getSpeed(s);
+                    jmri.InstanceManager.getDefault(SignalSpeedMap.class).getSpeed(s);
                 } catch (Exception ex) {
                     throw new JmriException("Value of requested turnout straight speed is not valid");
                 }
@@ -871,18 +997,16 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
         firePropertyChange("TurnoutStraightSpeedChange", oldSpeed, s);
     }
 
+    @Override
     public void vetoableChange(java.beans.PropertyChangeEvent evt) throws java.beans.PropertyVetoException {
         if ("CanDelete".equals(evt.getPropertyName())) { //IN18N
             if (evt.getOldValue().equals(getFirstSensor()) || evt.getOldValue().equals(getSecondSensor())) {
                 java.beans.PropertyChangeEvent e = new java.beans.PropertyChangeEvent(this, "DoNotDelete", null, null);
                 throw new java.beans.PropertyVetoException(Bundle.getMessage("InUseSensorTurnoutVeto", getDisplayName()), e); //IN18N
             }
-        } else if ("DoDelete".equals(evt.getPropertyName())) {
-            //log.info("Call to do delete"); //IN18N
         }
     }
 
-    static Logger log = LoggerFactory.getLogger(AbstractTurnout.class.getName());
-}
+    private final static Logger log = LoggerFactory.getLogger(AbstractTurnout.class);
 
-/* @(#)AbstractTurnout.java */
+}
