@@ -1,4 +1,3 @@
-// DefaultSignalSystem.java
 package jmri.implementation;
 
 import java.util.Enumeration;
@@ -14,15 +13,9 @@ import org.slf4j.LoggerFactory;
  * makes creation a little more heavy-weight, but speeds operation.
  *
  *
- * @author	Bob Jacobsen Copyright (C) 2009
- * @version $Revision$
+ * @author Bob Jacobsen Copyright (C) 2009
  */
 public class DefaultSignalSystem extends AbstractNamedBean implements SignalSystem {
-
-    /**
-     *
-     */
-    private static final long serialVersionUID = 5899513293974310228L;
 
     public DefaultSignalSystem(String systemName, String userName) {
         super(systemName, userName);
@@ -32,6 +25,7 @@ public class DefaultSignalSystem extends AbstractNamedBean implements SignalSyst
         super(systemName);
     }
 
+    @Override
     public void setProperty(String aspect, String key, Object value) {
         getTable(aspect).put(key, value);
         if (!keys.contains(key)) {
@@ -39,6 +33,7 @@ public class DefaultSignalSystem extends AbstractNamedBean implements SignalSyst
         }
     }
 
+    @Override
     public Object getProperty(String aspect, String key) {
         if (aspect == null) {
             return null;
@@ -46,16 +41,19 @@ public class DefaultSignalSystem extends AbstractNamedBean implements SignalSyst
         return getTable(aspect).get(key);
     }
 
+    @Override
     public void setImageType(String type) {
         if (!imageTypes.contains(type)) {
             imageTypes.add(type);
         }
     }
 
+    @Override
     public Enumeration<String> getImageTypeList() {
         return imageTypes.elements();
     }
 
+    @Override
     public String getAspect(Object obj, String key) {
         if (obj == null) {
             return null;
@@ -75,20 +73,23 @@ public class DefaultSignalSystem extends AbstractNamedBean implements SignalSyst
     protected Hashtable<String, Object> getTable(String aspect) {
         Hashtable<String, Object> t = aspects.get(aspect);
         if (t == null) {
-            t = new Hashtable<String, Object>();
+            t = new Hashtable<>();
             aspects.put(aspect, t);
         }
         return t;
     }
 
+    @Override
     public Enumeration<String> getAspects() {
         return aspects.keys();
     }
 
+    @Override
     public Enumeration<String> getKeys() {
         return keys.elements();
     }
 
+    @Override
     public boolean checkAspect(String aspect) {
         return aspects.get(aspect) != null;
     }
@@ -115,16 +116,31 @@ public class DefaultSignalSystem extends AbstractNamedBean implements SignalSyst
 
     }
 
+    /**
+     * {@inheritDoc}
+     *
+     * This method returns a constant result on the DefaultSignalSystem.
+     *
+     * @return {@link jmri.NamedBean#INCONSISTENT}
+     */
+    @Override
     public int getState() {
-        throw new NoSuchMethodError();
+        return INCONSISTENT;
     }
 
+    /**
+     * {@inheritDoc}
+     *
+     * This method has no effect on the DefaultSignalSystem.
+     */
+    @Override
     public void setState(int s) {
-        throw new NoSuchMethodError();
+        // do nothing
     }
 
     float maximumLineSpeed = 0.0f;
 
+    @Override
     public float getMaximumLineSpeed() {
         if (maximumLineSpeed == 0.0f) {
             for (String as : aspects.keySet()) {
@@ -132,12 +148,13 @@ public class DefaultSignalSystem extends AbstractNamedBean implements SignalSyst
                 if (speed != null) {
                     float aspectSpeed = 0.0f;
                     try {
-                        aspectSpeed = new Float(speed);
+                        aspectSpeed = Float.valueOf(speed);
                     } catch (NumberFormatException nx) {
                         try {
-                            aspectSpeed = jmri.implementation.SignalSpeedMap.getMap().getSpeed(speed);
-                        } catch (Exception ex) {
+                            aspectSpeed = jmri.InstanceManager.getDefault(SignalSpeedMap.class).getSpeed(speed);
+                        } catch (IllegalArgumentException ex) {
                             //Considered Normal if the speed does not appear in the map
+                            log.debug("Speed {} not found in map", speed);
                         }
                     }
                     if (aspectSpeed > maximumLineSpeed) {
@@ -149,41 +166,40 @@ public class DefaultSignalSystem extends AbstractNamedBean implements SignalSyst
         }
         if (maximumLineSpeed == 0.0f) {
             //no speeds configured so will use the default.
-            maximumLineSpeed = jmri.implementation.SignalSpeedMap.getMap().getSpeed("Maximum");
+            maximumLineSpeed = jmri.InstanceManager.getDefault(SignalSpeedMap.class).getSpeed("Maximum");
         }
         return maximumLineSpeed;
     }
 
     protected java.util.Hashtable<String, Hashtable<String, Object>> aspects
-            = new jmri.util.OrderedHashtable<String, Hashtable<String, Object>>();
+            = new jmri.util.OrderedHashtable<>();
 
-    protected java.util.Vector<String> keys = new java.util.Vector<String>();
+    protected java.util.Vector<String> keys = new java.util.Vector<>();
 
-    protected java.util.Vector<String> imageTypes = new java.util.Vector<String>();
+    protected java.util.Vector<String> imageTypes = new java.util.Vector<>();
 
-    @edu.umd.cs.findbugs.annotations.SuppressWarnings(value = "SBSC_USE_STRINGBUFFER_CONCATENATION")
-    // Only used occasionally, so inefficient String processing not really a problem
-    // though it would be good to fix it if you're working in this area
+    @Override
     public String toString() {
-        String retval = "SignalSystem " + getSystemName() + "\n";
+        StringBuilder retval = new StringBuilder();
+        retval.append("SignalSystem ").append(getSystemName()).append("\n");
         Enumeration<String> e1 = getAspects();
         while (e1.hasMoreElements()) {
             String s1 = e1.nextElement();
-            retval += "  " + s1 + "\n";
+            retval.append("  ").append(s1).append("\n");
             Enumeration<String> e2 = getKeys();
             while (e2.hasMoreElements()) {
                 String s2 = e2.nextElement();
-                retval += "    " + s2 + ": " + getProperty(s1, s2) + "\n";
+                retval.append("    ").append(s2).append(": ").append(getProperty(s1, s2)).append("\n");
             }
         }
-        return retval;
+        return retval.toString();
     }
 
+    @Override
     public String getBeanType() {
         return Bundle.getMessage("BeanNameSignalSystem");
     }
 
-    static Logger log = LoggerFactory.getLogger(DefaultSignalSystem.class.getName());
+    private final static Logger log = LoggerFactory.getLogger(DefaultSignalSystem.class);
 }
 
-/* @(#)DefaultSignalSystem.java */
