@@ -1,12 +1,11 @@
-// AutoActiveTrain.java
-// AutoActiveTrain.java
 package jmri.jmrit.dispatcher;
 
+import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import java.beans.PropertyChangeEvent;
 import java.beans.PropertyChangeListener;
 import java.util.ArrayList;
-import java.util.ResourceBundle;
 import jmri.Block;
+import jmri.BlockManager;
 import jmri.DccThrottle;
 import jmri.EntryPoint;
 import jmri.InstanceManager;
@@ -16,13 +15,14 @@ import jmri.SignalHead;
 import jmri.SignalMast;
 import jmri.ThrottleListener;
 import jmri.Timebase;
+import jmri.implementation.SignalSpeedMap;
 import jmri.jmrit.roster.RosterEntry;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 /**
  * This class holds information and options for an ActiveTrain when it is
- * running in AUTOMATIC mode. It ia an extension to Active Train for automatic
+ * running in AUTOMATIC mode. It is an extension to Active Train for automatic
  * running.
  * <P>
  * This class implements logic that follows a train around a layout. Train
@@ -44,13 +44,14 @@ import org.slf4j.LoggerFactory;
  * The AutoEngineer sub class is based in part on code by Pete Cressman
  * contained in Warrants.java
  *
- * @author	Dave Duchamp Copyright (C) 2010-2011
- * @version	$Revision$
+ * @author Dave Duchamp Copyright (C) 2010-2011
  */
 public class AutoActiveTrain implements ThrottleListener {
 
     /**
-     * Main constructor method
+     * Create an AutoActiveTrain.
+     *
+     * @param at the train to automate
      */
     public AutoActiveTrain(ActiveTrain at) {
         _activeTrain = at;
@@ -59,13 +60,10 @@ public class AutoActiveTrain implements ThrottleListener {
         _lbManager = InstanceManager.getDefault(jmri.jmrit.display.layoutEditor.LayoutBlockManager.class);
     }
 
-    static final ResourceBundle rb = ResourceBundle
-            .getBundle("jmri.jmrit.dispatcher.DispatcherBundle");
-
-    /* Speed aspects as defined by Doughlas A. Kerr - "Rail Signal Aspects and Indications"
-     * doug.kerr.home.att.net/pumpkin/Rail_Signal_Aspects.pdf (from Pete Cressman)
+    /* Speed aspects as defined by Douglas A. Kerr - "Rail Signal Aspects and Indications"
+     * http://dougkerr.net/Pumpkin/articles/Rail_signal_aspects.pdf (from Pete Cressman)
      */
-    public static final int SPEED_MASK = 0x07;     // least significant 3 bits
+//    public static final int SPEED_MASK = 0x07;     // least significant 3 bits
     public static final int STOP_SPEED = 0x01;     // No Speed
     public static final int RESTRICTED_SPEED = 0x02;    // Train able to stop within 1/2 visual range (10mph)
     public static final int SLOW_SPEED = 0x03;     // Typically 15 mph  (25% of NORMAL)
@@ -78,11 +76,11 @@ public class AutoActiveTrain implements ThrottleListener {
 
     /* The ramp rates below are in addition to what the decoder itself does
      */
-    public static final int RAMP_NONE = 0x00;		// No ramping - set speed immediately
+    public static final int RAMP_NONE = 0x00;  // No ramping - set speed immediately
     public static final int RAMP_FAST = 0x01;     // Fast ramping
-    public static final int RAMP_MEDIUM = 0x02;		// Medium ramping
-    public static final int RAMP_MED_SLOW = 0x03;		// Medium/slow ramping
-    public static final int RAMP_SLOW = 0x04;		// Slow ramping
+    public static final int RAMP_MEDIUM = 0x02;  // Medium ramping
+    public static final int RAMP_MED_SLOW = 0x03;  // Medium/slow ramping
+    public static final int RAMP_SLOW = 0x04;  // Slow ramping
 
     /* Stop tasks codes
      */
@@ -99,17 +97,20 @@ public class AutoActiveTrain implements ThrottleListener {
     private boolean _forward = true;
     private float _targetSpeed = 0.0f;
     private int _savedStatus = ActiveTrain.RUNNING;
-    private int _currentRampRate = RAMP_NONE;     // current Ramp Rate
-    private boolean _pausingActive = false;		// true if train pausing thread is active
+    private int _currentRampRate = RAMP_NONE; // current Ramp Rate
+    private boolean _pausingActive = false;   // true if train pausing thread is active
 
     // persistent instance variables (saved with train info)
-    private int _rampRate = RAMP_NONE;     // default Ramp Rate
-    private float _speedFactor = 1.0f;		// default speed factor
-    private float _maxSpeed = 0.6f;			// default maximum train speed
-    private boolean _resistanceWheels = true;  // true if all train cars show occupancy
-    private boolean _runInReverse = false;  // true if the locomotive should run through Transit in reverse
-    private boolean _soundDecoder = false;  // true if locomotive has a sound decoder
-    private volatile float _maxTrainLength = 200.0f;  // default train length (scale feet/meters)
+    private int _rampRate = RAMP_NONE; // default Ramp Rate
+    private float _speedFactor = 1.0f; // default speed factor
+    private float _maxSpeed = 0.6f;    // default maximum train speed
+    private boolean _resistanceWheels = true; // true if all train cars show occupancy
+    private boolean _runInReverse = false;    // true if the locomotive should run through Transit in reverse
+    private boolean _soundDecoder = false;    // true if locomotive has a sound decoder
+    private volatile float _maxTrainLength = 200.0f; // default train length (scale feet/meters)
+    private float _stopBySpeedProfileAdjust = 1.0f;
+    private boolean _stopBySpeedProfile = false;
+    private boolean _useSpeedProfile = true;
 
     // accessor functions
     public ActiveTrain getActiveTrain() {
@@ -194,11 +195,7 @@ public class AutoActiveTrain implements ThrottleListener {
 
     public void setRunInReverse(boolean set) {
         _runInReverse = set;
-        if (_runInReverse) {
-            _forward = false;
-        } else {
-            _forward = true;
-        }
+        _forward = !_runInReverse;
     }
 
     public boolean getSoundDecoder() {
@@ -217,37 +214,70 @@ public class AutoActiveTrain implements ThrottleListener {
         _maxTrainLength = length;
     }
 
+    public void setUseSpeedProfile(boolean tf) {
+        _useSpeedProfile = tf;
+    }
+
+    public void setStopBySpeedProfile(boolean tf) {
+        _stopBySpeedProfile = tf;
+    }
+
+    public void setStopBySpeedProfileAdjust(float adjust) {
+        _stopBySpeedProfileAdjust = adjust;
+    }
+
     RosterEntry re = null;
     boolean useSpeedProfile = false;
 
     /**
      * Initialize new Auto Active Train or get a new throttle after WORKING Sets
      * up the DCC address and initiates creation of a throttle to run the train.
+     *
+     * @return true if initialized; false otherwise
      */
     public boolean initialize() {
+        //clear all flags
+        _pausingActive = false;
+        _stoppingBySensor = false;
+        _stoppingForStopSignal = false;
+        _stoppingByBlockOccupancy = false;
+        _stoppingUsingSpeedProfile = false;
+
         // get decoder address
-        _address = Integer.valueOf(_activeTrain.getDccAddress()).intValue();
+        try {
+            _address = Integer.parseInt(_activeTrain.getDccAddress());
+        } catch (NumberFormatException ex) {
+            log.warn("invalid dcc address '{}' for {}", _activeTrain.getDccAddress(), _activeTrain.getTrainName());
+            return false;
+        }
         if ((_address < 1) || (_address > 9999)) {
-            log.warn("invalid dcc address for " + _activeTrain.getTrainName());
+            log.warn("invalid dcc address '{}' for {}", _activeTrain.getDccAddress(), _activeTrain.getTrainName());
             return false;
         }
         // request a throttle for automatic operation, throttle returned via callback below
-        boolean ok = true;
+        log.debug("{}: requesting throttle address={}", _activeTrain.getTrainName(), _address);
+        useSpeedProfile = false;
+        boolean ok;
         if (_activeTrain.getTrainSource() == ActiveTrain.ROSTER) {
             if (_activeTrain.getRosterEntry() != null) {
                 re = _activeTrain.getRosterEntry();
+                //ok = InstanceManager.getDefault(ThrottleManager.class).requestThrottle(_activeTrain.getRosterEntry(), this);
                 ok = InstanceManager.throttleManagerInstance().requestThrottle(_activeTrain.getRosterEntry(), this);
-                if (re.getSpeedProfile() != null) {
-                    useSpeedProfile = true;
+                if (_useSpeedProfile) {
+                    if (re.getSpeedProfile() != null && re.getSpeedProfile().getProfileSize() > 0) {
+                        useSpeedProfile = true;
+                    }
                 }
             } else {
+                //ok = InstanceManager.getDefault(ThrottleManager.class).requestThrottle(_address, this);
                 ok = InstanceManager.throttleManagerInstance().requestThrottle(_address, this);
             }
         } else {
+            //ok = InstanceManager.getDefault(ThrottleManager.class).requestThrottle(_address, this);
             ok = InstanceManager.throttleManagerInstance().requestThrottle(_address, this);
         }
         if (!ok) {
-            log.warn("Throttle for locomotive address " + _address + " could not be setup.");
+            log.warn("Throttle for locomotive address {} could not be setup.", _address);
             _activeTrain.setMode(ActiveTrain.DISPATCHED);
             return false;
         }
@@ -255,19 +285,21 @@ public class AutoActiveTrain implements ThrottleListener {
     }
 
     // Throttle feedback method - Initiates running AutoEngineer with the new throttle
+    @Override
     public void notifyThrottleFound(DccThrottle t) {
         _throttle = t;
         if (_throttle == null) {
-            javax.swing.JOptionPane.showMessageDialog(null, java.text.MessageFormat.format(rb.getString(
-                    "Error28"), new Object[]{_activeTrain.getTrainName()}), rb.getString("InformationTitle"),
+            javax.swing.JOptionPane.showMessageDialog(null, java.text.MessageFormat.format(Bundle.getMessage(
+                    "Error28"), new Object[]{_activeTrain.getTrainName()}), Bundle.getMessage("MessageTitle"),
                     javax.swing.JOptionPane.INFORMATION_MESSAGE);
-            log.warn("null throttle returned for train  " + _activeTrain.getTrainName() + "during automatic initialization.");
+            log.warn("null throttle returned for train  {}during automatic initialization.", _activeTrain.getTrainName());
             _activeTrain.setMode(ActiveTrain.DISPATCHED);
             return;
         }
-        if (log.isDebugEnabled()) {
-            log.debug("throttle address= " + _throttle.getLocoAddress().toString());
-        }
+        log.debug("{}: New AutoEngineer, address={}, length={}, factor={}",
+                _activeTrain.getTrainName(),
+                _throttle.getLocoAddress(),
+                getMaxTrainLength(), _speedFactor);
         _autoEngineer = new AutoEngineer();
         new Thread(_autoEngineer, "Auto Engineer " + _address).start();
         _activeTrain.setMode(ActiveTrain.AUTOMATIC);
@@ -276,7 +308,7 @@ public class AutoActiveTrain implements ThrottleListener {
             _activeTrain.setStatus(ActiveTrain.RUNNING);
             setEngineDirection();
             setSpeedBySignal();
-        } else if (DispatcherFrame.instance().getAutoAllocate()) {
+        } else if (InstanceManager.getDefault(DispatcherFrame.class).getAutoAllocate()) {
             // starting for the first time with automatic allocation of Sections
             setSpeedBySignal();
         }
@@ -286,12 +318,22 @@ public class AutoActiveTrain implements ThrottleListener {
         return _throttle;
     }
 
-    public void notifyFailedThrottleRequest(jmri.DccLocoAddress address, String reason) {
-        log.error("Throttle request failed for " + address + " because " + reason);
+    @Override
+    public void notifyFailedThrottleRequest(jmri.LocoAddress address, String reason) {
+        log.error("Throttle request failed for {} because {}", address, reason);
+    }
+
+    @Override
+    public void notifyStealThrottleRequired(jmri.LocoAddress address) {
+        // this is an automatically stealing impelementation.
+        log.warn("Stealing");
+        //InstanceManager.getDefault(ThrottleManager.class).stealThrottleRequest(address, this, true);
+        //
+        InstanceManager.throttleManagerInstance().stealThrottleRequest(address, this, true);
     }
 
     // more operational variables
-    private ArrayList<AllocatedSection> _allocatedSectionList = new ArrayList<AllocatedSection>();
+    private ArrayList<AllocatedSection> _allocatedSectionList = new ArrayList<>();
     private jmri.jmrit.display.layoutEditor.LayoutBlockManager _lbManager = null;
     private AllocatedSection _lastAllocatedSection = null;
 
@@ -303,7 +345,7 @@ public class AutoActiveTrain implements ThrottleListener {
         return null;
     }
     private boolean _initialized = false;
-    private Section _nextSection = null;	                     // train has not reached this Section yet
+    private Section _nextSection = null;                      // train has not reached this Section yet
     private volatile AllocatedSection _currentAllocatedSection = null;    // head of the train is in this Section
     private volatile AllocatedSection _previousAllocatedSection = null;   // previous Section - part of train could still be in this section
     private SignalHead _controllingSignal = null;
@@ -317,9 +359,9 @@ public class AutoActiveTrain implements ThrottleListener {
     private boolean _stoppingBySensor = false;
     private Sensor _stopSensor = null;
     private PropertyChangeListener _stopSensorListener = null;
-    private boolean _stoppingForStopSignal = false;		  // if true, stopping because of signal appearance
+    private boolean _stoppingForStopSignal = false;    // if true, stopping because of signal appearance
     private boolean _stoppingByBlockOccupancy = false;    // if true, stop when _stoppingBlock goes UNOCCUPIED
-        private boolean _stoppingUsingSpeedProfile = false;     // if true, using the speed profile against the roster entry to bring the loco to a stop in a specific distance
+    private boolean _stoppingUsingSpeedProfile = false;     // if true, using the speed profile against the roster entry to bring the loco to a stop in a specific distance
     private volatile Block _stoppingBlock = null;
     private boolean _resumingAutomatic = false;  // if true, resuming automatic mode after WORKING session
     private boolean _needSetSpeed = false;  // if true, train will set speed according to signal instead of stopping
@@ -346,9 +388,13 @@ public class AutoActiveTrain implements ThrottleListener {
         _activeHornThreads++;
     }
 
+    //
+    // Notification methods
+    //
     /**
-     * Notification methods Handle notification of change in state and occupancy
-     * of Sections and Blocks to track the train around the Transit
+     * Handle notification of changes in section state.
+     *
+     * @param as the allocated that changed
      */
     protected void handleSectionStateChange(AllocatedSection as) {
         if (!isInAllocatedList(as)) {
@@ -356,6 +402,11 @@ public class AutoActiveTrain implements ThrottleListener {
         }
     }
 
+    /**
+     * Handle notification of changes in section occupancy.
+     *
+     * @param as the section that changed
+     */
     protected void handleSectionOccupancyChange(AllocatedSection as) {
         if (!isInAllocatedList(as)) {
             if (log.isDebugEnabled()) {
@@ -376,11 +427,14 @@ public class AutoActiveTrain implements ThrottleListener {
         }
     }
 
-    @edu.umd.cs.findbugs.annotations.SuppressWarnings(value = "IS2_INCONSISTENT_SYNC",
+    @SuppressFBWarnings(value = "IS2_INCONSISTENT_SYNC",
             justification = "OK to not sync here, no conflict expected")
     protected void handleBlockStateChange(AllocatedSection as, Block b) {
         if (b.getState() == Block.OCCUPIED) {
-             // Block changed to OCCUPIED - train has entered this block
+            // Block changed to OCCUPIED - train has entered this block
+            log.trace("{}: handleBlockStateChange to OCCUPIED section {}, block {}, length {}", _activeTrain.getTrainName(),
+                    as.getSection().getSystemName(),
+                    b.getUserName(), getBlockLength(b));
             if (b == _nextBlock) {
                 _previousBlock = _currentBlock;
                 _currentBlock = _nextBlock;
@@ -388,45 +442,42 @@ public class AutoActiveTrain implements ThrottleListener {
                 if (_nextBlock != null) {
                     if ((_currentBlock == _activeTrain.getEndBlock()) && _activeTrain.getReverseAtEnd()
                             && (as.getSequence() == _activeTrain.getEndBlockSectionSequenceNumber())) {
-                        // entered last block of Transit, must stop and reverse
+                        // entered last block of Transit, must stop and reverse - ignore signal changes till train stopped.
+                        removeCurrentSignal();
                         stopInCurrentSection(END_REVERSAL);
+                        _activeTrain.setRestart();
                     } else if ((_currentBlock == _activeTrain.getStartBlock())
                             && _activeTrain.getResetWhenDone() && _activeTrain.isTransitReversed()
                             && (as.getSequence() == _activeTrain.getStartBlockSectionSequenceNumber())) {
-                        // entered start block of Transit, must stop and reset for continuing
+                        // entered start block of Transit, must stop and reset for continuing - ignore signal changes till train stopped.
+                        removeCurrentSignal();
                         stopInCurrentSection(BEGINNING_RESET);
+                        _activeTrain.setRestart();
                     } else if ((_currentBlock == _activeTrain.getEndBlock())
                             && _activeTrain.getResetWhenDone() && _activeTrain.getDelayedRestart() != ActiveTrain.NODELAY
                             && (as.getSequence() == _activeTrain.getEndBlockSectionSequenceNumber())) {
-                        // entered start block of Transit, must stop and reset for continuing
-                        stopInCurrentSection(BEGINNING_RESET);
+                        // entered start block of Transit, must stop and reset for continuing - ignore signal changes till train stopped.
                         removeCurrentSignal();
+                        stopInCurrentSection(BEGINNING_RESET);
+                        _activeTrain.setRestart();
                     } else {
-                        setupNewCurrentSignal();
+                        setupNewCurrentSignal(as);
                     }
                 } else {
                     // reached last block in this transit
                     removeCurrentSignal();
-                    if (log.isDebugEnabled()) {
-                        log.debug("block occupied stop in Current Section, Block - " + b.getUserName());
-                    }
+                    log.trace("{}: block occupied stop in Current Section, Block= {}", _activeTrain.getTrainName(), b.getUserName());
                     stopInCurrentSection(NO_TASK);
                 }
             } else if (b != _currentBlock) {
-                if (log.isDebugEnabled()) {
-                    log.debug("block going occupied - " + b.getUserName() + " - is not _nextBlock or _currentBlock - ignored.");
-                }
+                log.trace("{}: block going occupied {} is not _nextBlock or _currentBlock - ignored.", _activeTrain.getTrainName(), b.getUserName());
                 return;
             }
         } else if (b.getState() == Block.UNOCCUPIED) {
-            if (log.isDebugEnabled()) {
-                log.debug("Reached handleBlockStateChange to UNOCCUPIED - Section " + as.getSection().getSystemName()
-                        + ", Block - " + b.getUserName() + ", speed = " + _targetSpeed);
-            }
+            log.trace("{}: handleBlockStateChange to UNOCCUPIED - Section {}, Block {}, speed {}", _activeTrain.getTrainName(),
+                    as.getSection().getSystemName(), b.getUserName(), _targetSpeed);
             if (_stoppingByBlockOccupancy && (b == _stoppingBlock)) {
-                if (log.isDebugEnabled()) {
-                    log.debug("setStopNow from Block unoccupied, Block = " + b.getSystemName());
-                }
+                log.trace("{}: setStopNow by block occupancy from Block unoccupied, Block= {}", _activeTrain.getTrainName(), b.getSystemName());
                 _stoppingByBlockOccupancy = false;
                 _stoppingBlock = null;
 // djd may need more code here
@@ -441,26 +492,14 @@ public class AutoActiveTrain implements ThrottleListener {
         _autoTrainAction.handleBlockStateChange(as, b);
     }
 
-    protected void restart() {
-        setupNewCurrentSignal();
-    }
-
     /**
      * support methods
      */
     protected void setEngineDirection() {
         if (_runInReverse) {
-            if (_activeTrain.isTransitReversed()) {
-                _forward = true;
-            } else {
-                _forward = false;
-            }
+            _forward = _activeTrain.isTransitReversed();
         } else {
-            if (_activeTrain.isTransitReversed()) {
-                _forward = false;
-            } else {
-                _forward = true;
-            }
+            _forward = !_activeTrain.isTransitReversed();
         }
     }
 
@@ -490,12 +529,12 @@ public class AutoActiveTrain implements ThrottleListener {
                 if (ep != null) {
                     _nextBlock = ep.getBlock();
                 } else {
-                    log.error("failure to get entry point to Transit from Block " + _currentBlock.getSystemName());
+                    log.error("failure to get entry point to Transit from Block {}", _currentBlock.getSystemName());
                 }
             }
             if (_nextBlock != null) {
                 // set up new current signal
-                setupNewCurrentSignal();
+                setupNewCurrentSignal(as);
             }
         }
         // if train is stopping for lack of an allocation, set flag to restart it
@@ -504,7 +543,7 @@ public class AutoActiveTrain implements ThrottleListener {
             _needSetSpeed = true;
         }
         // request next allocation if appropriate--Dispatcher must decide whether to allocate it and when
-        if ((!DispatcherFrame.instance().getAutoAllocate()) && ((_lastAllocatedSection == null)
+        if ((!InstanceManager.getDefault(DispatcherFrame.class).getAutoAllocate()) && ((_lastAllocatedSection == null)
                 || (_lastAllocatedSection.getNextSection() == as.getSection()))) {
             // if AutoAllocate, this is now done in DispatcherFrame.java for all trains
             _lastAllocatedSection = as;
@@ -512,7 +551,7 @@ public class AutoActiveTrain implements ThrottleListener {
                 Section nSection = as.getNextSection();
                 int nextSeq = as.getNextSectionSequence();
                 int nextDir = _activeTrain.getAllocationDirectionFromSectionAndSeq(nSection, nextSeq);
-                DispatcherFrame.instance().requestAllocation(_activeTrain, nSection, nextDir, nextSeq, true, null);
+                InstanceManager.getDefault(DispatcherFrame.class).requestAllocation(_activeTrain, nSection, nextDir, nextSeq, true, null);
             }
         }
     }
@@ -527,7 +566,7 @@ public class AutoActiveTrain implements ThrottleListener {
         if (index >= 0) {
             _allocatedSectionList.remove(index);
         } else {
-            log.warn("unexpected call to removeAllocatedSection - Section " + as.getSection().getSystemName());
+            log.warn("unexpected call to removeAllocatedSection - Section {}", as.getSection().getSystemName());
         }
     }
 
@@ -567,22 +606,20 @@ public class AutoActiveTrain implements ThrottleListener {
         _controllingSignalMast = null;
     }
 
-    protected synchronized void setupNewCurrentSignal() {
+    protected synchronized void setupNewCurrentSignal(AllocatedSection as) {
         removeCurrentSignal();
-        if (DispatcherFrame.instance().getSignalType() == DispatcherFrame.SIGNALHEAD) {
+        if (InstanceManager.getDefault(DispatcherFrame.class).getSignalType() == DispatcherFrame.SIGNALHEAD) {
             SignalHead sh = _lbManager.getFacingSignalHead(_currentBlock, _nextBlock);
             if (sh != null) {
                 _controllingSignal = sh;
                 _conSignalProtectedBlock = _nextBlock;
-                sh.addPropertyChangeListener(_conSignalListener = new PropertyChangeListener() {
-                    public void propertyChange(PropertyChangeEvent e) {
-                        if (e.getPropertyName().equals("Appearance")) {
-                            // controlling signal has changed appearance
-                            setSpeedBySignal();
-                            if (_stoppingForStopSignal && (_targetSpeed > 0.0)) {
-                                cancelStopInCurrentSection();
-                                _stoppingForStopSignal = false;
-                            }
+                sh.addPropertyChangeListener(_conSignalListener = (PropertyChangeEvent e) -> {
+                    if (e.getPropertyName().equals("Appearance")) {
+                        // controlling signal has changed appearance
+                        setSpeedBySignal();
+                        if (_stoppingForStopSignal && (_targetSpeed > 0.0)) {
+                            cancelStopInCurrentSection();
+                            _stoppingForStopSignal = false;
                         }
                     }
                 });
@@ -596,35 +633,50 @@ public class AutoActiveTrain implements ThrottleListener {
             }
         } else {
             //SignalMast
-            SignalMast sm = _lbManager.getFacingSignalMast(_currentBlock, _nextBlock);
+            SignalMast sm = null;
+            Block cB = _currentBlock;
+            Block nB = _nextBlock;
+            if (as == null) {
+                as = _currentAllocatedSection;
+            }
+            // Find the signal mast at the end of the section by making sure that cB is within as and nB is not.
+            //while (as != null && as.getSection().containsBlock(nB) && nB != null) {
+            //    cB = nB;
+            //    nB = getNextBlock(nB, as);
+            //}
+            while (sm == null && nB != null) {
+                sm = _lbManager.getFacingSignalMast(cB, nB);
+                if (sm == null) {
+                    cB = nB;
+                    nB = getNextBlock(nB, as);
+                }
+            }
             if (sm != null) {
                 _controllingSignalMast = sm;
-                _conSignalProtectedBlock = _nextBlock;
-                sm.addPropertyChangeListener(_conSignalMastListener = new PropertyChangeListener() {
-                    public void propertyChange(PropertyChangeEvent e) {
-                        if (e.getPropertyName().equals("Aspect")) {
-                            // controlling signal has changed appearance
-                            if (_stoppingForStopSignal && (_targetSpeed > 0.0)) {
-                                cancelStopInCurrentSection();
-                                _stoppingForStopSignal = false;
-                            }
-                            setSpeedBySignal();
-                        } else if (e.getPropertyName().equals("Held")) {
-                            if (!((Boolean) e.getNewValue()).booleanValue()) {
-                                cancelStopInCurrentSection();
-                                _stoppingForStopSignal = false;
-                            }
-                            setSpeedBySignal();
+                _conSignalProtectedBlock = nB;
+                sm.addPropertyChangeListener(_conSignalMastListener = (PropertyChangeEvent e) -> {
+                    if (e.getPropertyName().equals("Aspect")) {
+                        // controlling signal has changed appearance
+                        if (_stoppingForStopSignal && (_targetSpeed > 0.0)) {
+                            cancelStopInCurrentSection();
+                            _stoppingForStopSignal = false;
                         }
+                        setSpeedBySignal();
+                    } else if (e.getPropertyName().equals("Held")) {
+                        if (!((Boolean) e.getNewValue())) {
+                            cancelStopInCurrentSection();
+                            _stoppingForStopSignal = false;
+                        }
+                        setSpeedBySignal();
                     }
                 });
-                if (log.isDebugEnabled()) {
-                    log.debug("new current signalmast = " + sm.getDisplayName() + " for " + _activeTrain.getTrainName());
-                }
+                log.debug("{}: new current signalmast {}({}) for section {}", _activeTrain.getTrainName(), sm.getDisplayName(),
+                        sm.getAspect(), as.getSectionName());
                 setSpeedBySignal();
             } // Note: null signal head will result when exiting throat-to-throat blocks.
-            else if (log.isDebugEnabled()) {
-                log.debug("new current signalmast is null - sometimes OK");
+            else {
+                log.debug("{}: new current signalmast is null for section {} - sometimes OK", _activeTrain.getTrainName(),
+                        as.getSectionName());
             }
         }
     }
@@ -666,9 +718,24 @@ public class AutoActiveTrain implements ThrottleListener {
             if (ts != null) {
                 _autoTrainAction.addTransitSection(ts);
             }
-            // check if new next Section exists but is not allocated to this train
-            if ((_nextSection != null) && !isSectionInAllocatedList(_nextSection)) {
+            // written the long way for readability
+            boolean nextSectionExpected = true;
+            if (ts != null &&
+                    ts.isSafe() &&
+                    _activeTrain.getAllocateMethod() == ActiveTrain.ALLOCATE_BY_SAFE_SECTIONS) {
+                nextSectionExpected = false;
+            } else if (!_activeTrain.isAllocationReversed() &&
+                    _activeTrain.getEndBlockSection() == _currentAllocatedSection.getSection()) {
+                nextSectionExpected = false;
+            } else if (_activeTrain.isAllocationReversed() &&
+                    _activeTrain.getStartBlockSectionSequenceNumber() == _currentAllocatedSection.getSequence()) {
+                nextSectionExpected = false;
+            }
+            // check if new next Section exists but is not allocated to this train excepting above circumstances
+            if ( nextSectionExpected &&_nextSection != null && !isSectionInAllocatedList(_nextSection)) {
                 // next section is not allocated to this train, must not enter it, even if signal is OK.
+                log.warn("Stopping train [{}] in section [{}], as next section [{}] is not allocated",
+                        _activeTrain.getActiveTrainName(),_currentAllocatedSection.getSectionName(),_nextSection.getUserName());
                 stopInCurrentSection(NO_TASK);
                 _needSetSpeed = false;
             }
@@ -678,121 +745,235 @@ public class AutoActiveTrain implements ThrottleListener {
     // called by above or when resuming after stopped action
     protected synchronized void setSpeedBySignal() {
         if (_pausingActive || ((_activeTrain.getStatus() != ActiveTrain.RUNNING)
-                && (_activeTrain.getStatus() != ActiveTrain.WAITING)) || ((_controllingSignal == null) 
-                && DispatcherFrame.instance().getSignalType() == DispatcherFrame.SIGNALHEAD)
-                || (DispatcherFrame.instance().getSignalType() == DispatcherFrame.SIGNALMAST && (_controllingSignalMast == null 
+                && (_activeTrain.getStatus() != ActiveTrain.WAITING)) || ((_controllingSignal == null)
+                && InstanceManager.getDefault(DispatcherFrame.class).getSignalType() == DispatcherFrame.SIGNALHEAD)
+                || (InstanceManager.getDefault(DispatcherFrame.class).getSignalType() == DispatcherFrame.SIGNALMAST && (_controllingSignalMast == null
                 || (_activeTrain.getStatus() == ActiveTrain.WAITING && !_activeTrain.getStarted())))
                 || (_activeTrain.getMode() != ActiveTrain.AUTOMATIC)) {
-            // train is pausing or not RUNNING or WAITING in AUTOMATIC mode, or no controlling signal, 
-            //			don't set speed based on controlling signal
+            // train is pausing or not RUNNING or WAITING in AUTOMATIC mode, or no controlling signal,
+            //   don't set speed based on controlling signal
             return;
         }
-        if (DispatcherFrame.instance().getSignalType() == DispatcherFrame.SIGNALHEAD) {
-            switch (_controllingSignal.getAppearance()) {
-                case SignalHead.DARK:
-                case SignalHead.RED:
-                case SignalHead.FLASHRED:
-                    // May get here from signal changing before Block knows it is occupied, so must 
-                    //      check Block occupancy sensor, which must change before signal.
-                    if (_conSignalProtectedBlock.getSensor().getState() == Block.OCCUPIED) {
+        if (InstanceManager.getDefault(DispatcherFrame.class).getSignalType() == DispatcherFrame.SIGNALHEAD) {
+            // a held signal always stop
+            if ( _controllingSignal != null && _controllingSignal.getAppearance() == SignalHead.HELD ) {
+                // Held - Stop
+                stopInCurrentSection(NO_TASK);
+                _stoppingForStopSignal = true;
+                return;
+            }
+
+            if (useSpeedProfile) {
+                // find speed from signal.
+                // find speed from block
+                // use least
+                String blockSpeedName = _conSignalProtectedBlock.getBlockSpeed();
+                if (blockSpeedName.contains("Global")) {
+                    blockSpeedName = InstanceManager.getDefault(BlockManager.class).getDefaultSpeed();
+                }
+                float blockSpeed = -1.0f;
+                if (blockSpeedName != null) {
+                    try {
+                        blockSpeed = Float.valueOf(blockSpeedName);
+                    } catch (NumberFormatException nx) {
+                        try {
+                            blockSpeed = jmri.InstanceManager.getDefault(SignalSpeedMap.class).getSpeed(blockSpeedName);
+                            log.debug("{}: Signal {} speed from map for {} is {}",
+                                    _activeTrain.getTrainName(), _controllingSignal.getDisplayName(), blockSpeedName,
+                                    blockSpeed);
+                        } catch (Exception ex) {
+                            //Considered Normal if the speed does not appear in the map
+                            log.warn("{}: Block {} Speed {} not found in SignalSpeedMap",
+                                    _activeTrain.getTrainName(), _conSignalProtectedBlock.getUserName(), blockSpeed);
+                        }
+                    }
+                }
+
+                float signalSpeed = -1.0f;
+                String signalSpeedName = "";
+                String displayedAspect = _controllingSignal.getAppearanceName();
+                try {
+                    signalSpeedName =
+                            jmri.InstanceManager.getDefault(SignalSpeedMap.class).getAppearanceSpeed(displayedAspect);
+                    signalSpeed = jmri.InstanceManager.getDefault(SignalSpeedMap.class).getSpeed(signalSpeedName);
+                } catch (Exception ex) {
+                    signalSpeed = -1.0f;
+                }
+                float useSpeed = 1.0f;
+                if (blockSpeed < signalSpeed) {
+                    useSpeed = blockSpeed;
+                } else {
+                    useSpeed = signalSpeed;
+                }
+
+                log.debug("BlockSpeed[" + blockSpeed + "] SignalSpeed[" + signalSpeed + "]");
+                if (useSpeed < 0.01f) {
+                    // check to to see if its allocated to us!!!
+                    //      check Block occupancy sensor if it is in an allocated block, which must change before signal.
+                    if ( (_currentAllocatedSection.isInActiveBlockList(_conSignalProtectedBlock) ||
+                            ( _nextSection != null &&  isSectionInAllocatedList(_nextSection) && _nextSection.containsBlock(_conSignalProtectedBlock)))
+                            && _conSignalProtectedBlock.getSensor().getState() == Block.OCCUPIED) {
                         // Train has just passed this signal - ignore this signal
+                        log.debug("{}:Ignoring red signal [{}]",_activeTrain.getTrainName(),_controllingSignal.getUserName());
                     } else {
                         stopInCurrentSection(NO_TASK);
                         _stoppingForStopSignal = true;
                     }
-                    break;
-                case SignalHead.YELLOW:
-                case SignalHead.FLASHYELLOW:
-                    setSpeed(SLOW_SPEED);
-                    _activeTrain.setStatus(ActiveTrain.RUNNING);
-                    break;
-                case SignalHead.GREEN:
-                case SignalHead.FLASHGREEN:
-                    setSpeed(NORMAL_SPEED);
-                    _activeTrain.setStatus(ActiveTrain.RUNNING);
-                    break;
-                case SignalHead.LUNAR:
-                case SignalHead.FLASHLUNAR:
-                    setSpeed(RESTRICTED_SPEED);
-                    _activeTrain.setStatus(ActiveTrain.RUNNING);
-                    break;
+                } else {
+                    setTargetSpeedByProfile(useSpeed);
+                }
+            } else {
+                switch (_controllingSignal.getAppearance()) {
+                    case SignalHead.DARK:
+                    case SignalHead.RED:
+                    case SignalHead.FLASHRED:
+                        // May get here from signal changing before Block knows it is occupied, so must
+                        //      check Block occupancy sensor, which must change before signal.
+                        // check to to see if its allocated to us!!!
+                        //      check Block occupancy sensor if it is in an allocated block, which must change before signal.
+                        if ((_currentAllocatedSection.isInActiveBlockList(_conSignalProtectedBlock) ||
+                                (_nextSection != null && isSectionInAllocatedList(_nextSection) && _nextSection.containsBlock(_conSignalProtectedBlock)))
+                                && _conSignalProtectedBlock.getSensor().getState() == Block.OCCUPIED) {
+                            // Train has just passed this signal - ignore this signal
+                            log.debug("{}:Ignoring red signal [{}]", _activeTrain.getTrainName(),
+                                    _controllingSignal.getUserName());
+                        } else {
+                            stopInCurrentSection(NO_TASK);
+                            _stoppingForStopSignal = true;
+                        }
+                        break;
+                    case SignalHead.YELLOW:
+                    case SignalHead.FLASHYELLOW:
+                        setTargetSpeedState(SLOW_SPEED);
+                        _activeTrain.setStatus(ActiveTrain.RUNNING);
+                        break;
+                    case SignalHead.GREEN:
+                    case SignalHead.FLASHGREEN:
+                        setTargetSpeedState(NORMAL_SPEED);
+                        _activeTrain.setStatus(ActiveTrain.RUNNING);
+                        break;
+                    case SignalHead.LUNAR:
+                    case SignalHead.FLASHLUNAR:
+                        setTargetSpeedState(RESTRICTED_SPEED);
+                        _activeTrain.setStatus(ActiveTrain.RUNNING);
+                        break;
+                    default:
+                        log.warn("Signal Head[{}] has invalid Appearence - using stop",_controllingSignal.getAppearance());
+                        stopInCurrentSection(NO_TASK);
+                        _stoppingForStopSignal = true;
+                }
+
             }
         } else {
-            //Set as SignalMast;
+            //Set speed using SignalMasts;
             String displayedAspect = _controllingSignalMast.getAspect();
-            if (log.isDebugEnabled()) {
-                log.debug("Controlling Mast for train " + _activeTrain.getTrainName() + " " + _controllingSignalMast.getDisplayName() + " " + displayedAspect);
+            if (log.isTraceEnabled()) {
+                log.trace("{}: Controlling mast {} ({})", _activeTrain.getTrainName(), _controllingSignalMast.getDisplayName(), displayedAspect);
+                if (_conSignalProtectedBlock == null) {
+                    log.trace("{}: Protected block is null", _activeTrain.getTrainName());
+                } else {
+                    log.trace("{}: Protected block: {} state: {} speed: {}", _activeTrain.getTrainName(),
+                            _conSignalProtectedBlock.getSensor().getDisplayName(),
+                            (_conSignalProtectedBlock.getSensor().getState() == Block.OCCUPIED ? "OCCUPIED" : "NOT OCCUPIED"),
+                            _conSignalProtectedBlock.getBlockSpeed());
+                }
             }
             if ((_controllingSignalMast.getAppearanceMap().getSpecificAppearance(jmri.SignalAppearanceMap.DANGER).equals(displayedAspect))
                     || !_controllingSignalMast.getLit() || _controllingSignalMast.getHeld()) {
-                if (_conSignalProtectedBlock.getSensor().getState() == Block.OCCUPIED) {
+                if ( (_currentAllocatedSection.isInActiveBlockList(_conSignalProtectedBlock) ||
+                        ( _nextSection != null &&  isSectionInAllocatedList(_nextSection) && _nextSection.containsBlock(_conSignalProtectedBlock)))
+                        && _conSignalProtectedBlock.getSensor().getState() == Block.OCCUPIED) {
                     // Train has just passed this signal - ignore this signal
-                    log.debug("_conSignalProtectedBlock is the block just past so ignore" + _conSignalProtectedBlock.getDisplayName());
+                    log.debug("{}: _conSignalProtectedBlock is the block just past so ignore {}", _activeTrain.getTrainName(), _conSignalProtectedBlock.getDisplayName());
                 } else {
-                    log.debug(_activeTrain.getTrainName() + " Signal at Held or Danager so Stop");
+                    log.debug("{}: Signal {} at Held or Danger so Stop", _activeTrain.getTrainName(), _controllingSignalMast.getDisplayName());
                     stopInCurrentSection(NO_TASK);
                     _stoppingForStopSignal = true;
                 }
             } else if (_controllingSignalMast.getAppearanceMap().getSpecificAppearance(jmri.SignalAppearanceMap.PERMISSIVE) != null
                     && _controllingSignalMast.getAppearanceMap().getSpecificAppearance(jmri.SignalAppearanceMap.PERMISSIVE).equals(displayedAspect)) {
-                setSpeed(RESTRICTED_SPEED);
+                setTargetSpeedState(RESTRICTED_SPEED);
                 _activeTrain.setStatus(ActiveTrain.RUNNING);
             } else {
-                //@TODO SignalMasts and the Logic behind them allow for a more granular set of speeds, we could do with an additional method to set the target speed
-                //Go for the speed based initially on what the signal reports back, failing that based upon any Signal Mast Logic Speed.
-                String strSpeed = (String) _controllingSignalMast.getSignalSystem().getProperty(displayedAspect, "speed");
+
+                //if using signalmasts, set speed to lesser of aspect speed and signalmastlogic speed
+                //  (minimum speed on the path to next signal, using turnout and block speeds)
+                String aspectSpeedStr = (String) _controllingSignalMast.getSignalSystem().getProperty(displayedAspect, "speed");
+                log.trace("{}: Signal {} speed {} for aspect {}", _activeTrain.getTrainName(), _controllingSignalMast.getDisplayName(), aspectSpeedStr, displayedAspect);
                 float speed = -1.0f;
-                if (strSpeed != null) {
+                if (aspectSpeedStr != null) {
                     try {
-                        speed = new Float(strSpeed);
+                        speed = Float.valueOf(aspectSpeedStr);
                     } catch (NumberFormatException nx) {
                         try {
-                            speed = jmri.implementation.SignalSpeedMap.getMap().getSpeed(strSpeed);
-                        } catch (Exception ex) {
+                            speed = jmri.InstanceManager.getDefault(SignalSpeedMap.class).getSpeed(aspectSpeedStr);
+                            log.trace("{}: Signal {} speed from map for {} is {}", _activeTrain.getTrainName(), _controllingSignalMast.getDisplayName(), aspectSpeedStr, speed);
+                        } catch (IllegalArgumentException ex) {
                             //Considered Normal if the speed does not appear in the map
-                            log.debug("Speed not found" + strSpeed);
+                            log.trace("{}: Speed not found {}", _activeTrain.getTrainName(), aspectSpeedStr);
                         }
                     }
                 }
-                jmri.SignalMastLogic sml = InstanceManager.signalMastLogicManagerInstance().getSignalMastLogic(_controllingSignalMast);
-                SignalMast des;
-                if (sml != null && (des = sml.getActiveDestination()) != null) {
+                int aspectSpeed = (int) speed; //save for debug message
 
-                    float smlSpeed = sml.getMaximumSpeed(des);
-                    if (speed < 0.0f || smlSpeed < 0.0f && smlSpeed < speed) {
-                        speed = smlSpeed;
+                //get maximum speed for the route between current and next signalmasts
+                float smLogicSpeed = -1.0f;
+                String smDestinationName = "unknown";
+                jmri.SignalMastLogic smLogic = InstanceManager.getDefault(jmri.SignalMastLogicManager.class).getSignalMastLogic(_controllingSignalMast);
+                if (smLogic != null) {
+                    SignalMast smDestination = smLogic.getActiveDestination();
+                    if (smDestination != null) {
+                        smDestinationName = smDestination.getDisplayName();
+                        smLogicSpeed = (int) smLogic.getMaximumSpeed(smDestination);
                     }
                 }
 
+                //use the smaller of aspect speed or route speed
+                if (smLogicSpeed > -1.0f && smLogicSpeed < speed) {
+                    speed = smLogicSpeed;
+                }
+
+                log.debug("{}: {}({}) {}({}), Dest: {}, path max: {}",
+                        _activeTrain.getTrainName(),
+                        _controllingSignalMast.getDisplayName(), displayedAspect, aspectSpeedStr, aspectSpeed,
+                        smDestinationName, (int) smLogicSpeed);
+
                 if (speed > -1.0f) {
-                    float increment = _controllingSignalMast.getSignalSystem().getMaximumLineSpeed() / 7f;
-                    int speedState = (int) Math.ceil(speed / increment);
-                    if (speedState <= 1) {
-                        speedState = 2;
-                    }
+//                    float mls = _controllingSignalMast.getSignalSystem().getMaximumLineSpeed();
+//                    float increment = mls / 7f;
+//                    log.trace("{}: MaximumLineSpeed is {}, speed is {}", _activeTrain.getTrainName(), mls, speed);
+//                    int speedState = (int) Math.ceil(speed / increment);
+//                    if (speedState <= 1) {
+//                        speedState = 2;
+//                    }
+//                    log.trace("{}: SpeedState is {}", _activeTrain.getTrainName(), speedState);
                     /* We should work on the basis that the speed required in the current block/section is governed by the signalmast
                      that we have passed and not the one we are approaching when we are accelerating.
-                     However when we are deaccelerating we should be aiming to meet the speed required by the approaching signalmast
+                     However when we are decelerating we should be aiming to meet the speed required by the approaching signalmast
                      whether that is to slow down or come to a complete stand still.
                      */
-                    if (speedState < previousSpeedSet) {
-                        setSpeed(speedState);
+                    if (prevSpeed == -1 || speed < prevSpeed) {
+                        log.debug("{}: Signal {} setting speed to {} for next", _activeTrain.getTrainName(),
+                                _controllingSignalMast.getDisplayName(), speed);
+                        setTargetSpeedValue(speed);
                     } else {
-                        setSpeed(previousSpeedSet);
+                        log.debug("{}: Signal {} setting speed to {} for previous", _activeTrain.getTrainName(),
+                                _controllingSignalMast.getDisplayName(), speed);
+                        setTargetSpeedValue(prevSpeed);
                     }
-                    previousSpeedSet = speedState;
+                    prevSpeed = speed;
                     _activeTrain.setStatus(ActiveTrain.RUNNING);
 
                 } else {
-                    log.warn("No specific speeds found so will use the default");
-                    setSpeed(NORMAL_SPEED);
+                    log.warn("{}: No specific speeds found so will use the default", _activeTrain.getTrainName());
+                    setTargetSpeedState(NORMAL_SPEED);
                     _activeTrain.setStatus(ActiveTrain.RUNNING);
                 }
             }
         }
     }
 
-    int previousSpeedSet = NORMAL_SPEED;
+    float prevSpeed = -1.0f;
 
     // called to cancel a stopping action that is in progress
     private synchronized void cancelStopInCurrentSection() {
@@ -816,11 +997,13 @@ public class AutoActiveTrain implements ThrottleListener {
 
     private synchronized void stopInCurrentSection(int task) {
         if (_currentAllocatedSection == null) {
-            log.error("Current allocated section null on entry to stopInCurrentSection");
+            log.error("{}: Current allocated section null on entry to stopInCurrentSection", _activeTrain.getTrainName());
             setStopNow();
             return;
         }
+        log.debug("{}: StopInCurrentSection called for {}", _activeTrain.getTrainName(), _currentAllocatedSection.getSectionName());
         if ((_targetSpeed == 0.0f) || isStopping()) {
+            log.debug("{}: train is already stopped or stopping.", _activeTrain.getTrainName());
             // ignore if train is already stopped or if stopping is in progress
             return;
         }
@@ -839,29 +1022,31 @@ public class AutoActiveTrain implements ThrottleListener {
                     _stoppingUsingSpeedProfile = true;
                 } else {
                     // sensor is not active
-                    setSpeed(RESTRICTED_SPEED);
+                    setTargetSpeedState(RESTRICTED_SPEED);
                 }
-                _stopSensor.addPropertyChangeListener(_stopSensorListener
-                        = new java.beans.PropertyChangeListener() {
-                            public void propertyChange(java.beans.PropertyChangeEvent e) {
-                                if (e.getPropertyName().equals("KnownState")) {
-                                    handleStopSensorChange();
-                                }
-                            }
-                        });
+                _stopSensor.addPropertyChangeListener(_stopSensorListener = (java.beans.PropertyChangeEvent e) -> {
+                    if (e.getPropertyName().equals("KnownState")) {
+                        handleStopSensorChange();
+                    }
+                });
                 _stoppingBySensor = true;
             }
-        } else if (_currentAllocatedSection.getLength() < _maxTrainLength) {
+        } else if (_currentAllocatedSection.getLength() < _maxTrainLength || _stopBySpeedProfile) {
             // train will not fit comfortably in the Section, stop it immediately
+            // stopping by speed profile uses block length to stop
             setStopNow();
         } else if (_resistanceWheels) {
             // train will fit in current allocated Section and has resistance wheels
             // try to stop by watching Section Block occupancy
             if (_currentAllocatedSection.getSection().getNumBlocks() == 1) {
-                Block tBlock = _previousAllocatedSection.getSection().getLastBlock();
-                if ((tBlock != null) && (tBlock.getState() == Block.OCCUPIED)) {
-                    _stoppingBlock = tBlock;
-                    setStopByBlockOccupancy();
+                if (_previousAllocatedSection != null) {
+                    Block tBlock = _previousAllocatedSection.getSection().getLastBlock();
+                    if ((tBlock != null) && (tBlock.getState() == Block.OCCUPIED)) {
+                        _stoppingBlock = tBlock;
+                        setStopByBlockOccupancy();
+                    } else {
+                        setStopNow();
+                    }
                 } else {
                     setStopNow();
                 }
@@ -957,24 +1142,26 @@ public class AutoActiveTrain implements ThrottleListener {
         }
         switch (task) {
             case END_REVERSAL:
-                /* Reset _previousBlock to be the _currentBlock if we do a continious reverse otherwise the stop in block method fails  
+                /* Reset _previousBlock to be the _currentBlock if we do a continious reverse otherwise the stop in block method fails
                 to stop the loco in the correct block
                  if the first block we come to has a stopped or held signal */
+                log.debug("End Reversal");
                 _previousBlock = _currentBlock;
                 _activeTrain.setTransitReversed(true);
-                _activeTrain.reverseAllAllocatedSections();
+                AllocatedSection aSec = _activeTrain.reverseAllAllocatedSections();
                 setEngineDirection();
                 if ((_nextSection != null) && !isSectionInAllocatedList(_nextSection)) {
-                    DispatcherFrame.instance().forceScanOfAllocation();
+                    InstanceManager.getDefault(DispatcherFrame.class).forceScanOfAllocation();
                     break;
                 }
-                setupNewCurrentSignal();
+                setupNewCurrentSignal(aSec);
                 setSpeedBySignal();
                 break;
             case BEGINNING_RESET:
+                log.debug("Beginning Reset");
                 if (_activeTrain.getResetWhenDone()) {
                     if (_activeTrain.getReverseAtEnd()) {
-                        /* Reset _previousBlock to be the _currentBlock if we do a continious 
+                        /* Reset _previousBlock to be the _currentBlock if we do a continious
                         reverse otherwise the stop in block method fails  to stop the loco in the correct block
                          if the first block we come to has a stopped or held signal */
                         _previousBlock = _currentBlock;
@@ -984,11 +1171,24 @@ public class AutoActiveTrain implements ThrottleListener {
                         _activeTrain.resetAllAllocatedSections();
                         setEngineDirection();
                         if ((_nextSection != null) && !isSectionInAllocatedList(_nextSection)) {
-                            DispatcherFrame.instance().forceScanOfAllocation();
+                            InstanceManager.getDefault(DispatcherFrame.class).forceScanOfAllocation();
                             break;
                         }
-                        setupNewCurrentSignal();
+                        setupNewCurrentSignal(null);
                         setSpeedBySignal();
+                    } else {
+                        // then active train is delayed
+                        _activeTrain.setTransitReversed(false);
+                        _activeTrain.resetAllAllocatedSections();
+                        setEngineDirection();
+                        _activeTrain.setRestart();
+                        if ((_nextSection != null) && !isSectionInAllocatedList(_nextSection)) {
+                            InstanceManager.getDefault(DispatcherFrame.class).forceScanOfAllocation();
+                            break;
+                        }
+                        setupNewCurrentSignal(null);
+                        setSpeedBySignal();
+
                     }
                 } else {
                     // dispatcher cancelled auto restart while train was stopping?
@@ -996,7 +1196,7 @@ public class AutoActiveTrain implements ThrottleListener {
                 }
                 break;
             default:
-                log.error("Request to execute unknown stop train task - " + task);
+                log.error("Request to execute unknown stop train task - {}", task);
                 break;
         }
     }
@@ -1017,7 +1217,7 @@ public class AutoActiveTrain implements ThrottleListener {
     }
 
     private synchronized void setStopNow() {
-        setSpeed(STOP_SPEED);
+        setTargetSpeedState(STOP_SPEED);
         if (_currentAllocatedSection == null) {  // this may occur if the train is not in the selected block when initially created and the signal is held.
             _activeTrain.setStatus(ActiveTrain.WAITING);
         } else if (_currentAllocatedSection.getNextSection() == null) {
@@ -1031,24 +1231,80 @@ public class AutoActiveTrain implements ThrottleListener {
 
     private void setStopByBlockOccupancy() {
         // note: _stoppingBlock must be set before invoking this method
-        _stoppingByBlockOccupancy = true;
-        setSpeed(RESTRICTED_SPEED);
+        //  verify that _stoppingBlock is actually occupied, if not stop immed
+        if (_stoppingBlock.getState() == Block.OCCUPIED) {
+            setTargetSpeedState(RESTRICTED_SPEED);
+            _stoppingByBlockOccupancy = true;
+        } else {
+            setStopNow();
+        }
     }
 
-    private synchronized void setSpeed(int aspect) {
+    private synchronized void setTargetSpeedState(int speedState) {
         _autoEngineer.slowToStop(false);
-        if (aspect > STOP_SPEED) {
-            float speed = _speedRatio[aspect];
+        if (speedState > STOP_SPEED) {
+            float speed = _speedRatio[speedState];
             if (speed > _maxSpeed) {
                 speed = _maxSpeed;
             }
             _targetSpeed = speed * _speedFactor;
-        } else if (useSpeedProfile) {
-            _targetSpeed = _speedRatio[aspect];
+        } else if (useSpeedProfile && _stopBySpeedProfile) {
+            _targetSpeed = _speedRatio[speedState];
             _stoppingUsingSpeedProfile = true;
             _autoEngineer.slowToStop(true);
         } else {
-            _targetSpeed = _speedRatio[aspect];
+            _targetSpeed = _speedRatio[speedState];
+            _autoEngineer.setHalt(true);
+        }
+    }
+
+    private synchronized void setTargetSpeedByProfile(float speedState) {
+        // the speed comes in as units of warrents (mph, kph, mm/s etc)
+            try {
+                float throttleSetting = _activeTrain.getRosterEntry().getSpeedProfile().getThrottleSettingFromSignalMapSpeed(speedState, _forward);
+                log.debug("{}:setTargetSpeedByProfile: SpeedState[{}]",_activeTrain.getTrainName(),throttleSetting,speedState);
+                if (throttleSetting > 0.009) {
+                    _autoEngineer.setHalt(false);
+                    _autoEngineer.slowToStop(false);
+                    _targetSpeed = throttleSetting * _speedFactor;
+                 } else if (useSpeedProfile && _stopBySpeedProfile) {
+                    _targetSpeed = 0.0f;
+                    _stoppingUsingSpeedProfile = true;
+                    _autoEngineer.slowToStop(true);
+                } else {
+                    _autoEngineer.slowToStop(false);
+                    _targetSpeed = 0.0f;
+                    _autoEngineer.setHalt(true);
+                }
+            } catch (Exception ex) {
+                log.error("setTargetSpeedByProfile crashed - Emergency Stop: " );
+                ex.printStackTrace();
+                _autoEngineer.slowToStop(false);
+                _targetSpeed = -1.0f;
+                _autoEngineer.setHalt(true);
+            }
+        }
+
+    /**
+     * Pass in speed as shown on dialogs, and convert to decimal speed needed by
+     * throttle.
+     */
+    private synchronized void setTargetSpeedValue(float speed) {
+        log.debug("{}:setTargetSpeedValue: Speed[{}]",_activeTrain.getTrainName(),speed);
+        if (useSpeedProfile) {
+            setTargetSpeedByProfile(speed);
+            return;
+        }
+        _autoEngineer.slowToStop(false);
+        float mls = _controllingSignalMast.getSignalSystem().getMaximumLineSpeed();
+        float decSpeed = (speed / mls);
+        if (decSpeed > 0.0f) {
+            if (decSpeed > _maxSpeed) {
+                decSpeed = _maxSpeed;
+            }
+            _targetSpeed = decSpeed * _speedFactor; //adjust for train's Speed Factor
+        } else {
+            _targetSpeed = 0.0f;
             _autoEngineer.setHalt(true);
         }
     }
@@ -1057,17 +1313,18 @@ public class AutoActiveTrain implements ThrottleListener {
         if (b == null) {
             return (0);
         }
-        float fLength = b.getLengthMm() / (float) (jmri.Scale.getScaleFactor(DispatcherFrame.instance().getScale()));
-        if (DispatcherFrame.instance().getUseScaleMeters()) {
+        float fLength = b.getLengthMm() / (float) (jmri.Scale.getScaleFactor(InstanceManager.getDefault(DispatcherFrame.class).getScale()));
+        if (InstanceManager.getDefault(DispatcherFrame.class).getUseScaleMeters()) {
             return (int) (fLength * 0.001f);
         }
         return (int) (fLength * 0.00328084f);
     }
 
     /**
-     * Initiates running in manual mode with external throttle This method is
-     * triggered by an action in the Transit The throttle in use for automatic
-     * operation is dispatched
+     * Initiates running in manual mode with external throttle.
+     * <p>
+     * This method is triggered by an action in the Transit. The throttle in use
+     * for automatic operation is dispatched.
      */
     protected void initiateWorking() {
         if (_activeTrain.getStatus() != ActiveTrain.WORKING) {
@@ -1085,8 +1342,10 @@ public class AutoActiveTrain implements ThrottleListener {
     }
 
     /**
-     * Returns when train is stopped Note: Provides for _autoEngineer becoming
-     * null during wait Ties up the current autoActiveTrain thread
+     * Returns when train is stopped.
+     * <p>
+     * Note: Provides for _autoEngineer becoming null during wait Ties up the
+     * current autoActiveTrain thread.
      */
     protected void waitUntilStopped() {
         boolean doneWaiting = false;
@@ -1125,8 +1384,10 @@ public class AutoActiveTrain implements ThrottleListener {
     }
 
     /**
-     * Pauses the auto active train for a specified number of fast clock minutes
-     * Pausing operation is performed in a separate thread
+     * Pause the auto active train for a specified number of fast clock minutes.
+     *
+     * @param fastMinutes the number of minutes to pause the train
+     * @return the thread waiting on the pause or null if already paused
      */
     public Thread pauseTrain(int fastMinutes) {
         if (_pausingActive) {
@@ -1178,6 +1439,7 @@ public class AutoActiveTrain implements ThrottleListener {
             _task = task;
         }
 
+        @Override
         public void run() {
             boolean waitingOnTrain = true;
             try {
@@ -1188,28 +1450,36 @@ public class AutoActiveTrain implements ThrottleListener {
                         Thread.sleep(_delay);
                     }
                 }
+                log.debug("executing task[{}]",_task);
                 executeStopTasks(_task);
             } catch (InterruptedException e) {
-                // interrupting will cause termination without executing the task						
+                log.warn("Waiting for train to stop interupted - stop tasks not executing");
+            } catch (Exception e) {
+                log.error("Waiting for train to stop crashed - stop tasks not executing.", e);
             }
         }
-        private int _delay = 91;
+
+        private final int _delay = 91;
         private int _task = 0;
     }
 
-// _________________________________________________________________________________________
-    // This class pauses the train in a separate thread
-    //  Train is stopped, then restarted after specified number of fast Minutes have elapsed
+    /**
+     * Pause the train in a separate thread. Train is stopped, then restarted
+     * after specified number of fast Minutes have elapsed.
+     */
     class PauseTrain implements Runnable {
 
         /**
-         * A runnable that executes a pause train for a specified number of Fast
-         * Clock minutes
+         * Create a PauseTrain
+         *
+         * @param fastMinutes the number of fast clock minutes to pause the
+         *                    train
          */
         public PauseTrain(int fastMinutes) {
             _fastMinutes = fastMinutes;
         }
 
+        @Override
         public void run() {
             // set to pause at a fast ramp rate
             _pausingActive = true;
@@ -1231,7 +1501,7 @@ public class AutoActiveTrain implements ThrottleListener {
                         waitNow = false;
                     }
                 } catch (InterruptedException e) {
-                    log.error("InterruptedException while watiting to stop for pause - " + e);
+                    log.error("InterruptedException while watiting to stop for pause - {}", (Object) e);
                     waitNow = false;
                     keepGoing = false;
                 }
@@ -1239,14 +1509,11 @@ public class AutoActiveTrain implements ThrottleListener {
             _activeTrain.setStatus(ActiveTrain.PAUSED);
             if (keepGoing) {
                 // wait for specified fast clock time
-                Timebase _clock = InstanceManager.timebaseInstance();
-                java.beans.PropertyChangeListener _clockListener = null;
-                _clock.addMinuteChangeListener(_clockListener
-                        = new java.beans.PropertyChangeListener() {
-                            public void propertyChange(java.beans.PropertyChangeEvent e) {
-                                _fastMinutes--;
-                            }
-                        });
+                Timebase _clock = InstanceManager.getDefault(jmri.Timebase.class);
+                java.beans.PropertyChangeListener _clockListener = (java.beans.PropertyChangeEvent e) -> {
+                    _fastMinutes--;
+                };
+                _clock.addMinuteChangeListener(_clockListener);
                 // wait for fast minutes to tick away
                 waitNow = true;
                 while (waitNow) {
@@ -1256,7 +1523,7 @@ public class AutoActiveTrain implements ThrottleListener {
                             waitNow = false;
                         }
                     } catch (InterruptedException e) {
-                        log.error("InterruptedException while waiting when paused - " + e);
+                        log.error("InterruptedException while waiting when paused", e);
                         keepGoing = false;
                     }
                 }
@@ -1279,52 +1546,61 @@ public class AutoActiveTrain implements ThrottleListener {
 
 // _________________________________________________________________________________________
     // This class runs a throttle to control the train in a separate thread.
-    // (This class started from code by Pete Cressman contained in Warrants.java.)
+    // (This class started from code by Pete Cressman contained in Warrant.java.)
     class AutoEngineer implements Runnable {
 
         AutoEngineer() {
         }
 
         // operational instance variables and flags
-        private float _minSpeedStep = 1.0f;
         private boolean _abort = false;
         private volatile boolean _halt = false;  // halt/resume from user's control
         private boolean _halted = false; // true if previously halted
         private boolean _slowToStop = false;
-        private boolean _ramping = false;  // true if ramping speed to _targetSpeed;
         private float _currentSpeed = 0.0f;
-        private boolean _currentForward = true;
-        private int _targetCount[] = {0, 1, 2, 3, 4};
-        private int _rampTargetCount = 0;
-        private int _rampCount = 0;
-        private Block _lastBlock = null;
+        private float _speedIncrement = 0.0f; //will be recalculated
+        private boolean _speedProfileStoppingIsRunning = false; // stop by speed profile is running.
 
+        @Override
         public void run() {
             _abort = false;
             setHalt(false);
             slowToStop(false);
+            DispatcherFrame dispatcher = InstanceManager.getDefault(DispatcherFrame.class);
+
+            //calculate speed increment to use in each minInterval time
+            _speedIncrement = (100.0f / ((float) dispatcher.getFullRampTime() / dispatcher.getMinThrottleInterval())
+                    / _currentRampRate) / 100.0f;
+            log.debug("{}: _speedIncrement={}", _activeTrain.getTrainName(), _speedIncrement);
+
+            // send direction to train
+            log.debug("{}: AutoEngineer.setIsForward({})", _activeTrain.getTrainName(), _forward);
             _throttle.setIsForward(_forward);
-            _currentForward = _forward;
+
+            // Give command station a chance to handle direction command
+            try {
+                Thread.sleep(dispatcher.getMinThrottleInterval() * 2);
+            } catch (InterruptedException ex) {
+                log.warn("Someones shutting us down");
+                _abort = true;
+            }
             _throttle.setSpeedSetting(_currentSpeed);
-            setSpeedStep(_throttle.getSpeedStepMode());
-            _ramping = false;
-            // this is the running loop
+            // this is the running loop, which adjusts speeds, including stop
             while (!_abort) {
                 if (_halt && !_halted) {
-                    if (useSpeedProfile) {
+                    if (_speedProfileStoppingIsRunning) {
                         re.getSpeedProfile().cancelSpeedChange();
+                        _speedProfileStoppingIsRunning = false;
                     }
                     _throttle.setSpeedSetting(0.0f);
                     _currentSpeed = 0.0f;
                     _halted = true;
                 } else if (_slowToStop) {
-                    re.getSpeedProfile().setExtraInitialDelay(1500f);
-                    re.getSpeedProfile().changeLocoSpeed(_throttle, _currentBlock, _targetSpeed);
-                    _currentSpeed = _throttle.getSpeedSetting();
-                    if (_currentBlock != _lastBlock) {
-                        _lastBlock = _currentBlock;
+                    if (useSpeedProfile) {
                         re.getSpeedProfile().setExtraInitialDelay(1500f);
-                        re.getSpeedProfile().changeLocoSpeed(_throttle, _currentBlock, _targetSpeed);
+                        re.getSpeedProfile().changeLocoSpeed(_throttle, _currentBlock, _targetSpeed,
+                                _stopBySpeedProfileAdjust);
+                        _speedProfileStoppingIsRunning = true;
                     } else {
                         if (_currentSpeed <= _targetSpeed) {
                             _halted = true;
@@ -1332,114 +1608,71 @@ public class AutoActiveTrain implements ThrottleListener {
                         }
                     }
                 } else if (!_halt) {
-                    // test if need to change direction
-                    if (_currentForward != _forward) {
-                        _throttle.setIsForward(_forward);
-                        _currentForward = _forward;
-                    }
-                    // test if need to change speed
-                    if (java.lang.Math.abs(_currentSpeed - _targetSpeed) > 0.001) {
-                        if (_currentRampRate == RAMP_NONE) {
-                            // set speed immediately
-                            _currentSpeed = _targetSpeed;
-                            _throttle.setSpeedSetting(_currentSpeed);
-                        } else if (!_ramping) {
-                            // initialize ramping
-                            _ramping = true;
-                            _rampCount = 1;
-                            _rampTargetCount = _targetCount[_currentRampRate];
-                        } else {
-                            // ramping the speed
-                            _rampCount++;
-                            if (_rampCount > _rampTargetCount) {
-                                // step the speed
-                                if (_currentSpeed < _targetSpeed) {
-                                    if (useSpeedProfile) {
-                                        re.getSpeedProfile().cancelSpeedChange();
-                                    }
-                                    // ramp up
-                                    _currentSpeed += _minSpeedStep;
-                                    if (_currentSpeed >= _targetSpeed) {
-                                        _currentSpeed = _targetSpeed;
-                                        _ramping = false;
-                                    } else {
-                                        _rampCount = 0;
-                                    }
-                                    _throttle.setSpeedSetting(_currentSpeed);
-                                } else {
-                                    if (useSpeedProfile) {
-                                        re.getSpeedProfile().changeLocoSpeed(_throttle, _currentAllocatedSection.getSection(), _targetSpeed);
-                                        _currentSpeed = _targetSpeed;
-                                    } else {
-                                        // ramp down
-                                        _currentSpeed -= _minSpeedStep;
-                                        if (_currentSpeed <= _targetSpeed) {
-                                            _currentSpeed = _targetSpeed;
-                                            _ramping = false;
-                                        } else {
-                                            _rampCount = 0;
-                                        }
-                                        _throttle.setSpeedSetting(_currentSpeed);
-                                    }
-                                }
+                    // check for cancel speed profile
+                    if (_speedProfileStoppingIsRunning) {
+                        re.getSpeedProfile().cancelSpeedChange();
+                        _speedProfileStoppingIsRunning = false;
+                        // and do one loop to take effect
+                    } else {
+                        // change direction if needed
+                        if (_throttle.getIsForward() != _forward) {
+                            log.debug("AutoEngineer.setIsForward({}), was {} for {}", _forward,
+                                    _throttle.getIsForward(), _throttle.getLocoAddress());
+                            _throttle.setIsForward(_forward);
+
+                            // Give command station a chance to handle reversing.
+                            try {
+                                Thread.sleep(dispatcher.getMinThrottleInterval() * 2);
+                            } catch (InterruptedException ex) {
+                                log.warn("Someones shutting us down");
+                                _abort = true;
                             }
                         }
+                        // test if need to change speed
+                        if (java.lang.Math.abs(_currentSpeed - _targetSpeed) > 0.001) {
+                            if (_currentRampRate == RAMP_NONE) {
+                                // set speed immediately
+                                _currentSpeed = _targetSpeed;
+                                _throttle.setSpeedSetting(_currentSpeed);
+                            } else {
+                                if (_currentSpeed < _targetSpeed) {
+                                    _currentSpeed += _speedIncrement;
+                                    if (_currentSpeed >= _targetSpeed) {
+                                        _currentSpeed = _targetSpeed;
+                                    }
+                                } else {
+                                    _currentSpeed -= _speedIncrement;
+                                    if (_currentSpeed <= _targetSpeed) {
+                                        _currentSpeed = _targetSpeed;
+                                    }
+                                }
+                                _throttle.setSpeedSetting(_currentSpeed);
+                            } //ramping
+                        } //if currentSpeed != targetSpeed
                     }
                 }
-                if (useSpeedProfile && _currentAllocatedSection != null && _currentAllocatedSection != _lastAllocatedSection) {
-                    _lastAllocatedSection = _currentAllocatedSection;
+                // Give other threads a chance to work
+                try {
+                    Thread.sleep(dispatcher.getMinThrottleInterval());
+                } catch (InterruptedException ex) {
+                    log.warn("Someones shutting us down");
+                    _abort = true;
                 }
-                // delay
-                synchronized (this) {
-                    try {
-                        if (!_ramping) {
-                            wait(500);
-                        } else {
-                            wait(200);
-                        }
-                    } catch (InterruptedException ie) {
-                        log.error("InterruptedException in AutoEngineer" + ie);
-                    }
-                }
-            }
-            // shut down
-        }
-
-        private void setSpeedStep(int step) {
-            switch (step) {
-                case DccThrottle.SpeedStepMode14:
-                    _minSpeedStep = 1.0f / 15;
-                    for (int i = 1; i < 5; i++) {
-                        _targetCount[i] *= 6;
-                    }
-                    break;
-                case DccThrottle.SpeedStepMode27:
-                    _minSpeedStep = 1.0f / 28;
-                    for (int i = 1; i < 5; i++) {
-                        _targetCount[i] *= 4;
-                    }
-                    break;
-                case DccThrottle.SpeedStepMode28:
-                    _minSpeedStep = 1.0f / 29;
-                    for (int i = 1; i < 5; i++) {
-                        _targetCount[i] *= 4;
-                    }
-                    break;
-                default:
-                    _minSpeedStep = 1.0f / 127;
-                    break;
-            }
+            } //while !abort
+              // shut down
         }
 
         public synchronized void slowToStop(boolean toStop) {
             _slowToStop = toStop;
             if (!toStop) {
                 setHalt(toStop);
-            }
+             }
         }
 
         /**
-         * Flag from user's control Note: Halt here invokes immediate stop.
+         * Flag from user's control.
+         *
+         * @param halt true to immediately stop the train; false otherwise
          */
         public synchronized void setHalt(boolean halt) {
             _halt = halt;
@@ -1449,27 +1682,38 @@ public class AutoActiveTrain implements ThrottleListener {
         }
 
         /**
-         * Allow user to test if train is moving or stopped
+         * Set the train speed directly, bypassing ramping.
+         *
+         * @param speed 0.0 (stop) to 1.0 (full)
+         */
+        public synchronized void setSpeedImmediate(float speed) {
+            log.trace("{}: setting speed directly to {}%", _activeTrain.getTrainName(), (int) (speed * 100));
+            _targetSpeed = speed;
+            _currentSpeed = speed + _speedIncrement; // close enough to force change, but skip ramping
+        }
+
+        /**
+         * Check if train is moving or stopped.
+         *
+         * @return true if stopped; false otherwise
          */
         public synchronized boolean isStopped() {
-            if (_currentSpeed > 0.01f) {
-                return false;
-            }
-            return true;
+            // when stopping by speed profile you must refresh the throttle speed.
+            _currentSpeed = _throttle.getSpeedSetting();
+            return _currentSpeed <= 0.005f;
         }
 
         /**
-         * Allow user to test if train is moving at its current requested speed
+         * Check if train is moving at its current requested speed.
+         *
+         * @return true if at requested speed; false otherwise
          */
         public synchronized boolean isAtSpeed() {
-            if (java.lang.Math.abs(_currentSpeed - _targetSpeed) > 0.01) {
-                return false;
-            }
-            return true;
+            return java.lang.Math.abs(_currentSpeed - _targetSpeed) <= 0.01;
         }
 
         /**
-         * Flag from user to end run
+         * Flag from user to end run.
          */
         public void abort() {
             _abort = true;
@@ -1564,11 +1808,32 @@ public class AutoActiveTrain implements ThrottleListener {
                 case 28:
                     _throttle.setF28(isSet);
                     break;
+                default:
+                    log.error("Unhandled cmdNum: {}", cmdNum);
+                    break;
             }
         }
     }
 
-    static Logger log = LoggerFactory.getLogger(AutoActiveTrain.class.getName());
-}
+    /**
+     * Convert ramp rate name, stored as a string into the constant value
+     * assigned.
+     *
+     * @param rampRate - name of ramp rate, such as "RAMP_FAST"
+     * @return integer representing a ramprate constant value
+     */
+    public static int getRampRateFromName(String rampRate) {
+        if (rampRate.equals(Bundle.getMessage("RAMP_FAST"))) {
+            return RAMP_FAST;
+        } else if (rampRate.equals(Bundle.getMessage("RAMP_MEDIUM"))) {
+            return RAMP_MEDIUM;
+        } else if (rampRate.equals(Bundle.getMessage("RAMP_MED_SLOW"))) {
+            return RAMP_MED_SLOW;
+        } else if (rampRate.equals(Bundle.getMessage("RAMP_SLOW"))) {
+            return RAMP_SLOW;
+        }
+        return RAMP_NONE;
+    }
 
-/* @(#)AutoActiveTrain.java */
+    private final static Logger log = LoggerFactory.getLogger(AutoActiveTrain.class);
+}
